Updated with version: 3.15.0 changes

--- a/_locales/bg/messages.json
+++ b/_locales/bg/messages.json
@@ -660,7 +660,7 @@
     "description":"Step 2 for disabling Chrome and Safari extensions"
   },
   "disableforsafaristepone":{
-    "message":"Натиснете Safari &rarr; Настройки &rarr; Разширения.",
+    "message":"Натиснете Safari > Настройки > Разширения.",
     "description":"Step 1 for disabling Safari extensions"
   },
   "reenableadsonebyone":{
@@ -1011,10 +1011,6 @@
     "message":"ДОБРЕ, можете да я блокирате самостоятелно в страницата с настройки. Благодарим!",
     "description":"Telling users who won't report an ad to us how to handle it for themselves"
   },
-  "adblock_outdated_chrome":{
-    "message":"Ползвате стара версия на AdBlock. Моля, отворете [[страницата с разширения]], разрешете „Режим за програмисти“ и натиснете „Актуализирайте разширенията сега“.",
-    "description":"Ad report page instructions to update AdBlock in Chrome. The link will point to 'chrome:\/\/chrome\/extensions\/'"
-  },
   "block_an_ad_on_this_page":{
     "message":"Блокирай реклама в страницата",
     "description":"Toolbar button menu entry and context menu entry"
@@ -1166,10 +1162,6 @@
   "hide_this_button":{
     "message":"Скрий бутона",
     "description":"Toolbar button menu entry to hide the AdBlock button"
-  },
-  "spread_the_word":{
-    "message":"Нека и другите чуят!",
-    "description":"Text of a share link"
   },
   "donate_to_adblock":{
     "message":"Обичате AdBlock? Дарете!",
@@ -1361,37 +1353,13 @@
       }
     }
   },
-  "latest_version":{
-    "message":"AdBlock e обновен!",
-    "description":"On the Options > Support page, shows when there are no updates available for AdBlock"
-  },
   "here":{
     "message":"тук",
     "description":"This message is injected in other strings as a link\/button"
   },
-  "update_available":{
-    "message":"Налице е обновяване на AdBlock! Вземете го от [[тук]].\nЗабележка: за автоматично получане на обновявания, просто щракнете (в менюто) по Safari > Настройки > Разширения и поставете отметка пред „Обновявай разширенията автоматично от Галерия с разширения на Safari“.",
-    "description":"On the Options > Support page, shown when there is an update available for AdBlock on Safari"
-  },
-  "ff_adblock_outdated":{
-    "message":"Ползвате стара версия на AdBlock. Моля, щракнете по меню на Firefox и посочете „Добавки“. После в страницата с добавки щракнете по иконата със зъбно колело (т.е. Инструменти на добавките) и посочете „Провери за обновявания“.",
-    "description":"On the Options > Support page, shows when there is an update available for AdBlock. 'Add-ons', 'Tools for all add-ons' and 'Check for Updates' should match the strings displayed by Firefox."
-  },
   "adblocksupport":{
     "message":"Поддръжка",
     "description":"Title of the support tab"
-  },
-  "checkforupdates":{
-    "message":"Проверка за обновяване (ще отнеме само няколко секунди)… ",
-    "description":"Displayed when AdBlock is checking the newest available version"
-  },
-  "somethingwentwrong":{
-    "message":"Нещо се обърка при проверката за обновяване.",
-    "description":"Displayed when AdBlock is checking the newest available version and an error occurs"
-  },
-  "checkinternetconnection":{
-    "message":"Докладването на реклама изисква да сте свързан с интернет.",
-    "description":"Displayed when AdBlock is checking the newest available version and an error occurs while reporting an ad on adreport page"
   },
   "whatsnew":{
     "message":"Какво е новото в изданието — вижте [[списъка с изменения]]!",
