--- a/_locales/el/messages.json
+++ b/_locales/el/messages.json
@@ -259,10 +259,6 @@
     "message":"Εμφάνιση στοιχείων αποσφαλμάτωσης στο αρχείο κονσόλας (καθυστερεί το AdBlock)",
     "description":"Checkbox on the 'General' tab of the Options page"
   },
-  "datacollectionoption":{
-    "message":"Να επιτρέπεται στο AdBlock να συλλέγει ανώνυμα δεδομένα και χρήση λίστας φίλτρων",
-    "description":"Checkbox on the 'General' tab of the Options page"
-  },
   "updatedrightnow":{
     "message":"ανανεώθηκε μόλις τώρα",
     "description":"Label for subscription"
@@ -660,7 +656,7 @@
     "description":"Step 2 for disabling Chrome and Safari extensions"
   },
   "disableforsafaristepone":{
-    "message":"Κάντε κλικ στο μενού Safari &rarr; Προτιμήσεις &rarr; Επεκτάσεις.",
+    "message":"Κάντε κλικ στο μενού Safari > Προτιμήσεις > Επεκτάσεις.",
     "description":"Step 1 for disabling Safari extensions"
   },
   "reenableadsonebyone":{
@@ -1011,10 +1007,6 @@
     "message":"Εντάξει, μπορείτε ακόμα να μπλοκάρετε αυτή τη διαφήμιση μόνο για εσάς στην σελίδα επιλογών. Ευχαριστούμε!",
     "description":"Telling users who won't report an ad to us how to handle it for themselves"
   },
-  "adblock_outdated_chrome":{
-    "message":"Χρησιμοποιείτε παλιά έκδοση του AdBlock. Πηγαίνετε στη [[σελίδα επεκτάσεων]], ενεργοποιήστε την 'Λειτουργία για προγραμματιστές' και κάντε κλικ στο 'Ενημέρωση επεκτάσεων τώρα'",
-    "description":"Ad report page instructions to update AdBlock in Chrome. The link will point to 'chrome:\/\/chrome\/extensions\/'"
-  },
   "block_an_ad_on_this_page":{
     "message":"Μπλοκάρισμα μίας διαφήμισης σε αυτή τη σελίδα",
     "description":"Toolbar button menu entry and context menu entry"
@@ -1166,10 +1158,6 @@
   "hide_this_button":{
     "message":"Απόκρυψη του κουμπιού",
     "description":"Toolbar button menu entry to hide the AdBlock button"
-  },
-  "spread_the_word":{
-    "message":"Βοηθήστε να το διαδώσουμε!",
-    "description":"Text of a share link"
   },
   "donate_to_adblock":{
     "message":"Αγαπάτε το AdBlock; Εξετάστε τη δωρεά!",
@@ -1361,37 +1349,13 @@
       }
     }
   },
-  "latest_version":{
-    "message":"Το AdBlock είναι ενημερωμένο!",
-    "description":"On the Options > Support page, shows when there are no updates available for AdBlock"
-  },
   "here":{
     "message":"εδώ",
     "description":"This message is injected in other strings as a link\/button"
   },
-  "update_available":{
-    "message":"Υπάρχει μια ενημερωμένη έκδοση για το AdBlock! Πηγαίνετε [[εκεί]] για ενημέρωση. Σημείωση: Αν θέλετε να λαμβάνετε ενημερώσεις αυτόματα, απλά κάντε κλικ στο Safari (στη γραμμή μενού) > Προτιμήσεις > Επεκτάσεις και ελέγξτε την επιλογή «Αυτόματη ενημέρωση επεκτάσεων από τη συλλογή επεκτάσεων Safari».",
-    "description":"On the Options > Support page, shown when there is an update available for AdBlock on Safari"
-  },
-  "ff_adblock_outdated":{
-    "message":"Χρησιμοποιείτε μια παλιά έκδοση του AdBlock. Παρακαλούμε κάντε κλικ στο κουμπί μενού Firefox και επιλέξτε πρόσθετα. Στη συνέχεια, στη σελίδα \"Πρόσθετα\", κάντε κλικ στο εικονίδιο με το γρανάζι (Εργαλεία για όλα τα πρόσθετα) και επιλέξτε «Έλεγχος για ενημερώσεις».",
-    "description":"On the Options > Support page, shows when there is an update available for AdBlock. 'Add-ons', 'Tools for all add-ons' and 'Check for Updates' should match the strings displayed by Firefox."
-  },
   "adblocksupport":{
     "message":"Υποστήριξη AdBlock",
     "description":"Title of the support tab"
-  },
-  "checkforupdates":{
-    "message":"Έλεγχος για ενημερώσεις (πρέπει να διαρκέσει μόνο λίγα δευτερόλεπτα)...",
-    "description":"Displayed when AdBlock is checking the newest available version"
-  },
-  "somethingwentwrong":{
-    "message":"Κάτι πήγε στραβά κατά τον έλεγχο ενημερώσεων.",
-    "description":"Displayed when AdBlock is checking the newest available version and an error occurs"
-  },
-  "checkinternetconnection":{
-    "message":"Για να αναφέρετε μια διαφήμιση, πρέπει να είστε συνδεδεμένοι στον ιστό.",
-    "description":"Displayed when AdBlock is checking the newest available version and an error occurs while reporting an ad on adreport page"
   },
   "whatsnew":{
     "message":"Τι νέο υπάρχει στην τελευταία έκδοση; Δείτε το [[αρχείο αλλαγών]]!",
