--- a/_locales/es/messages.json
+++ b/_locales/es/messages.json
@@ -259,10 +259,6 @@
     "message":"Mostrar datos debug en la consola (esto ralentiza AdBlock)",
     "description":"Checkbox on the 'General' tab of the Options page"
   },
-  "datacollectionoption":{
-    "message":"Permitir que AdBlock recoja anónimamente datos sobre el uso de las listas de filtros",
-    "description":"Checkbox on the 'General' tab of the Options page"
-  },
   "updatedrightnow":{
     "message":"Actualizado ahora mismo",
     "description":"Label for subscription"
@@ -660,7 +656,7 @@
     "description":"Step 2 for disabling Chrome and Safari extensions"
   },
   "disableforsafaristepone":{
-    "message":"Haz clic en el menú de Safari &rarr; Preferencias &rarr; Extensiones.",
+    "message":"Haz clic en el menú de Safari > Preferencias > Extensiones.",
     "description":"Step 1 for disabling Safari extensions"
   },
   "reenableadsonebyone":{
@@ -1011,10 +1007,6 @@
     "message":"Vale, puedes seguir bloqueando el anuncio tú mismo en la página de opciones. ¡Gracias!",
     "description":"Telling users who won't report an ad to us how to handle it for themselves"
   },
-  "adblock_outdated_chrome":{
-    "message":"Estás usando una versión antigua de AdBlock. Por favor ve al [[administrador de extensiones]], activa el modo para desarrolladores y haz click en \"Actualizar extensiones ahora\"",
-    "description":"Ad report page instructions to update AdBlock in Chrome. The link will point to 'chrome:\/\/chrome\/extensions\/'"
-  },
   "block_an_ad_on_this_page":{
     "message":"Bloquear un anuncio en esta página",
     "description":"Toolbar button menu entry and context menu entry"
@@ -1166,10 +1158,6 @@
   "hide_this_button":{
     "message":"Ocultar este botón",
     "description":"Toolbar button menu entry to hide the AdBlock button"
-  },
-  "spread_the_word":{
-    "message":"¡Ayuda a correr la voz!",
-    "description":"Text of a share link"
   },
   "donate_to_adblock":{
     "message":"¿Te encanta AdBlock? ¡Considera hacer una donación!",
@@ -1361,37 +1349,13 @@
       }
     }
   },
-  "latest_version":{
-    "message":"¡AdBlock está actualizado!",
-    "description":"On the Options > Support page, shows when there are no updates available for AdBlock"
-  },
   "here":{
     "message":"aquí",
     "description":"This message is injected in other strings as a link\/button"
   },
-  "update_available":{
-    "message":"¡Hay una actualización disponible para AdBlock! Entra [[aquí]] para actualizar. \nNota: Si prefieres recibir las actualizaciones automáticamente, haz clic en Safari (en la barra de menús) > Preferencias > Extensiones y marca la opción 'Actualizar automáticamente las extensiones de la galería de extensiones de Safari'.",
-    "description":"On the Options > Support page, shown when there is an update available for AdBlock on Safari"
-  },
-  "ff_adblock_outdated":{
-    "message":"Estás usando una versión antigua de AdBlock. Haz clic en el botón Firefox del menú y elige Complementos. A continuación, en la página de complementos, haz clic en el engranaje (Herramientas para todas las extensiones), y elige 'Buscar actualizaciones'.",
-    "description":"On the Options > Support page, shows when there is an update available for AdBlock. 'Add-ons', 'Tools for all add-ons' and 'Check for Updates' should match the strings displayed by Firefox."
-  },
   "adblocksupport":{
     "message":"Soporte de AdBlock",
     "description":"Title of the support tab"
-  },
-  "checkforupdates":{
-    "message":"Comprobando la existencia de actualizaciones (sólo debe tardar unos pocos segundos)...",
-    "description":"Displayed when AdBlock is checking the newest available version"
-  },
-  "somethingwentwrong":{
-    "message":"Algo ha fallado durante la comprobación de actualizaciones.",
-    "description":"Displayed when AdBlock is checking the newest available version and an error occurs"
-  },
-  "checkinternetconnection":{
-    "message":"Para informar de un anuncio, debes estar conectado a internet.",
-    "description":"Displayed when AdBlock is checking the newest available version and an error occurs while reporting an ad on adreport page"
   },
   "whatsnew":{
     "message":"¿Qué novedades hay en la última versión? ¡Compruébalo en la [[lista de cambios]]!",
