--- a/_locales/fr/messages.json
+++ b/_locales/fr/messages.json
@@ -660,7 +660,7 @@
     "description":"Step 2 for disabling Chrome and Safari extensions"
   },
   "disableforsafaristepone":{
-    "message":"Allez dans le menu Safari &rarr; Préférences &rarr; Extensions.",
+    "message":"Allez dans le menu Safari > Préférences > Extensions.",
     "description":"Step 1 for disabling Safari extensions"
   },
   "reenableadsonebyone":{
@@ -1011,10 +1011,6 @@
     "message":"D'accord, vous pouvez tout de même bloquer cette publicité pour vous-même dans les options.",
     "description":"Telling users who won't report an ad to us how to handle it for themselves"
   },
-  "adblock_outdated_chrome":{
-    "message":"Vous utilisez une version obsolète d'AdBlock. Merci d'aller sur [[la page des extensions]], activer le \"Mode développeur\" et cliquer sur \"Mettre à jour les extensions maintenant\"",
-    "description":"Ad report page instructions to update AdBlock in Chrome. The link will point to 'chrome:\/\/chrome\/extensions\/'"
-  },
   "block_an_ad_on_this_page":{
     "message":"Bloquer une pub sur cette page",
     "description":"Toolbar button menu entry and context menu entry"
@@ -1166,10 +1162,6 @@
   "hide_this_button":{
     "message":"Masquer ce bouton",
     "description":"Toolbar button menu entry to hide the AdBlock button"
-  },
-  "spread_the_word":{
-    "message":"Faites passer le mot !",
-    "description":"Text of a share link"
   },
   "donate_to_adblock":{
     "message":"Aimez-vous AdBlock ? Pensez à faire un don !",
@@ -1361,37 +1353,13 @@
       }
     }
   },
-  "latest_version":{
-    "message":"AdBlock est à jour !",
-    "description":"On the Options > Support page, shows when there are no updates available for AdBlock"
-  },
   "here":{
     "message":"ici",
     "description":"This message is injected in other strings as a link\/button"
   },
-  "update_available":{
-    "message":"Il y a une mise à jour pour AdBlock ! Cliquez [[ici]] pour mettre à jour.\nNote : si vous souhaitez recevoir des mises à jour automatiquement, il suffit de cliquer sur Safari (dans la barre des menus) > Préférences > Extensions\net cocher l'option \"Automatiquement mettre à jour les extensions de la galerie Safari\".",
-    "description":"On the Options > Support page, shown when there is an update available for AdBlock on Safari"
-  },
-  "ff_adblock_outdated":{
-    "message":"Vous utilisez une version obsolète d'AdBlock. Cliquez sur le menu Firefox et sélectionnez Modules. Ensuite, sur la page des modules, cliquez sur l'icône d'engrenage (Outils pour tous les modules) et choisissez \"Rechercher des mises à jour\".",
-    "description":"On the Options > Support page, shows when there is an update available for AdBlock. 'Add-ons', 'Tools for all add-ons' and 'Check for Updates' should match the strings displayed by Firefox."
-  },
   "adblocksupport":{
     "message":"Support AdBlock",
     "description":"Title of the support tab"
-  },
-  "checkforupdates":{
-    "message":"Recherche de mises à jour (ne devrait pas prendre plus de quelques secondes)…",
-    "description":"Displayed when AdBlock is checking the newest available version"
-  },
-  "somethingwentwrong":{
-    "message":"Quelque chose s'est mal passé lors de la vérification des mises à jour.",
-    "description":"Displayed when AdBlock is checking the newest available version and an error occurs"
-  },
-  "checkinternetconnection":{
-    "message":"Pour signaler une publicité, vous devez être connecté à Internet.",
-    "description":"Displayed when AdBlock is checking the newest available version and an error occurs while reporting an ad on adreport page"
   },
   "whatsnew":{
     "message":"Quoi de neuf dans la dernière version ? Découvrez-le dans [[les notes de version]] !",
