--- a/_locales/hr/messages.json
+++ b/_locales/hr/messages.json
@@ -259,10 +259,6 @@
     "message":"Prikaži izjave uklanjanja pogreške u zapisu konzole (usporava AdBlock)",
     "description":"Checkbox on the 'General' tab of the Options page"
   },
-  "datacollectionoption":{
-    "message":"Dopusti AdBlock-u anonimno prikupljanje podatka i korištenja liste filtara",
-    "description":"Checkbox on the 'General' tab of the Options page"
-  },
   "updatedrightnow":{
     "message":"upravo ažurirano",
     "description":"Label for subscription"
@@ -660,7 +656,7 @@
     "description":"Step 2 for disabling Chrome and Safari extensions"
   },
   "disableforsafaristepone":{
-    "message":"Kliknite Safari menu &rarr; Postavke &rarr; Proširenja.",
+    "message":"Kliknite Safari menu > Postavke > Proširenja.",
     "description":"Step 1 for disabling Safari extensions"
   },
   "reenableadsonebyone":{
@@ -1011,10 +1007,6 @@
     "message":"U redu, još možete blokirati ovu reklamu samo za sebe u Postavkama. Hvala!",
     "description":"Telling users who won't report an ad to us how to handle it for themselves"
   },
-  "adblock_outdated_chrome":{
-    "message":"Koristite staru verziju AdBlock-a. Molim Vas posjetite [[stranicu proširenja]], omogućite 'Način za razvojne programere' i kliknite 'Ažuriraj proširenja sada'.",
-    "description":"Ad report page instructions to update AdBlock in Chrome. The link will point to 'chrome:\/\/chrome\/extensions\/'"
-  },
   "block_an_ad_on_this_page":{
     "message":"Blokiraj reklamu na ovoj stranici",
     "description":"Toolbar button menu entry and context menu entry"
@@ -1166,10 +1158,6 @@
   "hide_this_button":{
     "message":"Sakrij dugme",
     "description":"Toolbar button menu entry to hide the AdBlock button"
-  },
-  "spread_the_word":{
-    "message":"Pomozite proširiti ideju!",
-    "description":"Text of a share link"
   },
   "donate_to_adblock":{
     "message":"Volite AdBlock? Razmislite o doniranju!",
@@ -1361,37 +1349,13 @@
       }
     }
   },
-  "latest_version":{
-    "message":"AdBlock je ažuriran!",
-    "description":"On the Options > Support page, shows when there are no updates available for AdBlock"
-  },
   "here":{
     "message":"ovdje",
     "description":"This message is injected in other strings as a link\/button"
   },
-  "update_available":{
-    "message":"Postoji ažuriranje za AdBlock! Idite [[ovdje]] kako bi ga ažurirali.\nBilješka: ako želite primati aužriranja automatski, samo kliknite Safari (u izborniku) > Postavke > Proširenja i omogućite opciju 'Automatski ažuriraj proširenje u Safari galeriji proširenja'.",
-    "description":"On the Options > Support page, shown when there is an update available for AdBlock on Safari"
-  },
-  "ff_adblock_outdated":{
-    "message":"Koristite staru verziju AdBlock programa. Molimo kliknite Firefox gumb za izbornik i odaberite Proširenja. Tada na stranici Proširenja kliknite ikonu zupčanik (Alati za sva proširenja) i odaberite 'Provjerite ažuriranja'.",
-    "description":"On the Options > Support page, shows when there is an update available for AdBlock. 'Add-ons', 'Tools for all add-ons' and 'Check for Updates' should match the strings displayed by Firefox."
-  },
   "adblocksupport":{
     "message":"AdBlock podrška",
     "description":"Title of the support tab"
-  },
-  "checkforupdates":{
-    "message":"Provjeravanje ažuriranja (trebalo bi trajati samo nekoliko sekundi)...",
-    "description":"Displayed when AdBlock is checking the newest available version"
-  },
-  "somethingwentwrong":{
-    "message":"Nešto je pošlo po zlu kod provjere ažuriranja.",
-    "description":"Displayed when AdBlock is checking the newest available version and an error occurs"
-  },
-  "checkinternetconnection":{
-    "message":"Da biste prijavili reklamu, morate biti spojeni na internet.",
-    "description":"Displayed when AdBlock is checking the newest available version and an error occurs while reporting an ad on adreport page"
   },
   "whatsnew":{
     "message":"Što je novo u posljednjem izdanju? Pogledajte [[popis promjena]]!",
