--- a/_locales/hu/messages.json
+++ b/_locales/hu/messages.json
@@ -259,10 +259,6 @@
     "message":"Hibakeresési kijelentések megjelenítése a Konzolnaplóban (ami lelassítja az AdBlock-ot)",
     "description":"Checkbox on the 'General' tab of the Options page"
   },
-  "datacollectionoption":{
-    "message":"Engedély megadása az AdBlock-nak, hogy névtelen szűrőlista használatot és adatokat gyűjtsön",
-    "description":"Checkbox on the 'General' tab of the Options page"
-  },
   "updatedrightnow":{
     "message":"éppen most frissítve",
     "description":"Label for subscription"
@@ -660,7 +656,7 @@
     "description":"Step 2 for disabling Chrome and Safari extensions"
   },
   "disableforsafaristepone":{
-    "message":"Kattintson a Safari menüben &rarr; a Környezeti beállítások &rarr; Bővítmények menüpontjára.",
+    "message":"Kattintson a Safari menüben > a Környezeti beállítások > Bővítmények menüpontjára.",
     "description":"Step 1 for disabling Safari extensions"
   },
   "reenableadsonebyone":{
@@ -1011,10 +1007,6 @@
     "message":"OKÉ, az Opciók oldalon még mindig blokkolhatja magának a hirdetést. Köszönjük!",
     "description":"Telling users who won't report an ad to us how to handle it for themselves"
   },
-  "adblock_outdated_chrome":{
-    "message":"Az AdBlock egy régebbi verzióját használja. Kérem menjen [[a bővítmények oldalra]], engedélyezze a \"Fejlesztői módot\", majd kattintson a \"Bővítmények frissítése most\" gombra",
-    "description":"Ad report page instructions to update AdBlock in Chrome. The link will point to 'chrome:\/\/chrome\/extensions\/'"
-  },
   "block_an_ad_on_this_page":{
     "message":"Egy hirdetés blokkolása az oldalon",
     "description":"Toolbar button menu entry and context menu entry"
@@ -1166,10 +1158,6 @@
   "hide_this_button":{
     "message":"Gomb eljrejtése",
     "description":"Toolbar button menu entry to hide the AdBlock button"
-  },
-  "spread_the_word":{
-    "message":"Segítsen terjeszteni az igét!",
-    "description":"Text of a share link"
   },
   "donate_to_adblock":{
     "message":"Szereti az AdBlock-ot? Adományozzon!",
@@ -1361,37 +1349,13 @@
       }
     }
   },
-  "latest_version":{
-    "message":"Az AdBlock naprakész!",
-    "description":"On the Options > Support page, shows when there are no updates available for AdBlock"
-  },
   "here":{
     "message":"ide",
     "description":"This message is injected in other strings as a link\/button"
   },
-  "update_available":{
-    "message":"Van egy frissítés az AdBlock-hoz! Menjen [[ide]] a frissítéshez.\nMegjegyzés: Ha szeretne automatikusan frissítéseket kapni, csak kattintson a Safari (a manüsávban) > Beállítások > Bővítmények menüpontra, majd jelölje be a 'Bővítmények automatikus frissítése a Safari bővítmény galériában'.",
-    "description":"On the Options > Support page, shown when there is an update available for AdBlock on Safari"
-  },
-  "ff_adblock_outdated":{
-    "message":"Ön az AdBlock egy régebbi verzióját használja. Kérjük kattintson a Firefox menügombjára és válassza a Kiegészítők menüpontot. Aztán a Kiegészítők oldalon kattintson a fogaskerék ikonra (eszközök minden kiegészítőhöz), végül válassza a 'Frissítések keresése' menüpontot.",
-    "description":"On the Options > Support page, shows when there is an update available for AdBlock. 'Add-ons', 'Tools for all add-ons' and 'Check for Updates' should match the strings displayed by Firefox."
-  },
   "adblocksupport":{
     "message":"AdBlock ügyfélszolgálat",
     "description":"Title of the support tab"
-  },
-  "checkforupdates":{
-    "message":"Frissítések keresése (csak pár másodpercig tarthat)...",
-    "description":"Displayed when AdBlock is checking the newest available version"
-  },
-  "somethingwentwrong":{
-    "message":"Valami elromlott a frissítések keresése közben.",
-    "description":"Displayed when AdBlock is checking the newest available version and an error occurs"
-  },
-  "checkinternetconnection":{
-    "message":"Hirdetés bejelentéséhez kapcsolódnia kell az internethez.",
-    "description":"Displayed when AdBlock is checking the newest available version and an error occurs while reporting an ad on adreport page"
   },
   "whatsnew":{
     "message":"Mi új van a legfrissebb kiadásban? Nézze meg a [[változásnaplót]]!",
