--- a/_locales/it/messages.json
+++ b/_locales/it/messages.json
@@ -259,10 +259,6 @@
     "message":"Mostra messaggi di debug nella Console dei Log (rallenta AdBlock)",
     "description":"Checkbox on the 'General' tab of the Options page"
   },
-  "datacollectionoption":{
-    "message":"Consenti ad AdBlock di raccogliere anonimamente dati sull'utilizzo della lista filtri",
-    "description":"Checkbox on the 'General' tab of the Options page"
-  },
   "updatedrightnow":{
     "message":"appena aggiornato",
     "description":"Label for subscription"
@@ -660,7 +656,7 @@
     "description":"Step 2 for disabling Chrome and Safari extensions"
   },
   "disableforsafaristepone":{
-    "message":"Clicca il menu Safari &rarr; Preferenze &rarr; Estensioni.",
+    "message":"Clicca il menu Safari > Preferenze > Estensioni.",
     "description":"Step 1 for disabling Safari extensions"
   },
   "reenableadsonebyone":{
@@ -1011,10 +1007,6 @@
     "message":"OK, puoi ancora bloccare questa pubblicità da solo sulla pagina Opzioni. Grazie!",
     "description":"Telling users who won't report an ad to us how to handle it for themselves"
   },
-  "adblock_outdated_chrome":{
-    "message":"Stai usando una vecchia versione di AdBlock. Vai a [[the extensions page]], abilita 'Modalità sviluppatore' e clicca 'Aggiorna estensioni adesso'",
-    "description":"Ad report page instructions to update AdBlock in Chrome. The link will point to 'chrome:\/\/chrome\/extensions\/'"
-  },
   "block_an_ad_on_this_page":{
     "message":"Blocca una pubblicità su questa pagina",
     "description":"Toolbar button menu entry and context menu entry"
@@ -1166,10 +1158,6 @@
   "hide_this_button":{
     "message":"Nascondi questo bottone",
     "description":"Toolbar button menu entry to hide the AdBlock button"
-  },
-  "spread_the_word":{
-    "message":"Aiuta a diffondere il messaggio!",
-    "description":"Text of a share link"
   },
   "donate_to_adblock":{
     "message":"Ti piace AdBlock? Considera una donazione!",
@@ -1361,37 +1349,13 @@
       }
     }
   },
-  "latest_version":{
-    "message":"AdBlock è aggiornato!",
-    "description":"On the Options > Support page, shows when there are no updates available for AdBlock"
-  },
   "here":{
     "message":"qui",
     "description":"This message is injected in other strings as a link\/button"
   },
-  "update_available":{
-    "message":"C'è un aggiornamento per AdBlock! Vai [[qui]] per aggiornare. Nota: Se si desidera ricevere gli aggiornamenti automaticamente, basta cliccare su Safari (nella barra dei menu) > Preferenze > Estensioni e seleziona l'opzione 'Aggiorna automaticamente le estensioni della Galleria Estensioni Safari'.",
-    "description":"On the Options > Support page, shown when there is an update available for AdBlock on Safari"
-  },
-  "ff_adblock_outdated":{
-    "message":"Stai usando una versione datata di AdBlock. Clicca sul bottone menu di Firefox e scegli Componenti aggiuntivi. Successivamente sulla pagina dei Componenti aggiuntivi, clicca l'icona a forma di ruota (Strumento per tutti i componenti aggiuntivi), e scegli 'Controlla aggiornamenti'.",
-    "description":"On the Options > Support page, shows when there is an update available for AdBlock. 'Add-ons', 'Tools for all add-ons' and 'Check for Updates' should match the strings displayed by Firefox."
-  },
   "adblocksupport":{
     "message":"Supporto AdBlock",
     "description":"Title of the support tab"
-  },
-  "checkforupdates":{
-    "message":"Controlla aggiornamenti (dovrebbero bastare pochi secondi)...",
-    "description":"Displayed when AdBlock is checking the newest available version"
-  },
-  "somethingwentwrong":{
-    "message":"Qualcosa non ha funzionato durante il controllo aggiornamenti.",
-    "description":"Displayed when AdBlock is checking the newest available version and an error occurs"
-  },
-  "checkinternetconnection":{
-    "message":"Per segnalare una pubblicità devi essere connesso a internet.",
-    "description":"Displayed when AdBlock is checking the newest available version and an error occurs while reporting an ad on adreport page"
   },
   "whatsnew":{
     "message":"Cos'è cambiato nell'ultimo rilascio? Guarda il [[changelog]]!",
