--- a/_locales/nl/messages.json
+++ b/_locales/nl/messages.json
@@ -259,10 +259,6 @@
     "message":"Toon debug resultaten in de Console Logs (dit vertraagt AdBlock).",
     "description":"Checkbox on the 'General' tab of the Options page"
   },
-  "datacollectionoption":{
-    "message":"Sta AdBlock toe om anoniem het gebruik van filters en gegevens te verzamelen",
-    "description":"Checkbox on the 'General' tab of the Options page"
-  },
   "updatedrightnow":{
     "message":"zojuist bijgewerkt",
     "description":"Label for subscription"
@@ -652,7 +648,7 @@
     "description":"On the ad report page, alert notifying users that we've disabled all other extensions"
   },
   "disableforsafaristepone":{
-    "message":"Klik op het Safari menu &rarr; Voorkeuren &rarr; Extensies.",
+    "message":"Klik op het Safari menu > Voorkeuren > Extensies.",
     "description":"Step 1 for disabling Safari extensions"
   },
   "reenableadsonebyone":{
@@ -991,10 +987,6 @@
     "message":"OK, je kan deze advertentie nog steeds voor jezelf blokkeren. Bedankt!",
     "description":"Telling users who won't report an ad to us how to handle it for themselves"
   },
-  "adblock_outdated_chrome":{
-    "message":"Je gebruikt een oude versie van AdBlock. Open de [[pagina voor extensiebeheer]], schakel 'Ontwikkelaarmodus' in en klik op 'Extensies nu bijwerken'",
-    "description":"Ad report page instructions to update AdBlock in Chrome. The link will point to 'chrome:\/\/chrome\/extensions\/'"
-  },
   "block_an_ad_on_this_page":{
     "message":"Blokkeer een advertentie op deze pagina",
     "description":"Toolbar button menu entry and context menu entry"
@@ -1146,10 +1138,6 @@
   "hide_this_button":{
     "message":"Verberg deze knop",
     "description":"Toolbar button menu entry to hide the AdBlock button"
-  },
-  "spread_the_word":{
-    "message":"Help ons om dit te verspreiden!",
-    "description":"Text of a share link"
   },
   "donate_to_adblock":{
     "message":"Hou je van AdBlock? Overweeg een donatie!",
@@ -1333,10 +1321,6 @@
       }
     }
   },
-  "latest_version":{
-    "message":"AdBlock is up-to-date!",
-    "description":"On the Options > Support page, shows when there are no updates available for AdBlock"
-  },
   "here":{
     "message":"hier",
     "description":"This message is injected in other strings as a link\/button"
@@ -1344,18 +1328,6 @@
   "adblocksupport":{
     "message":"AdBlock Ondersteuning",
     "description":"Title of the support tab"
-  },
-  "checkforupdates":{
-    "message":"Controleren op updates (duurt maar enkele seconden)...",
-    "description":"Displayed when AdBlock is checking the newest available version"
-  },
-  "somethingwentwrong":{
-    "message":"Er ging iets mis bij het controleren op updates.",
-    "description":"Displayed when AdBlock is checking the newest available version and an error occurs"
-  },
-  "checkinternetconnection":{
-    "message":"Om een advertentie te rapporteren moet je verbonden zijn met internet.",
-    "description":"Displayed when AdBlock is checking the newest available version and an error occurs while reporting an ad on adreport page"
   },
   "whatsnew":{
     "message":"Wat is er nieuw in de laatste versie? Bekijk de [[changelog]]!",
