--- a/_locales/pt_PT/messages.json
+++ b/_locales/pt_PT/messages.json
@@ -255,10 +255,6 @@
     "message":"Mostar as operações na Consola de Logs (torna o AdBlock lento)",
     "description":"Checkbox on the 'General' tab of the Options page"
   },
-  "datacollectionoption":{
-    "message":"Permitir que o AdBlock recolha lista de filtros usados e dados de forma anónima",
-    "description":"Checkbox on the 'General' tab of the Options page"
-  },
   "updatedrightnow":{
     "message":"actualizado agora mesmo",
     "description":"Label for subscription"
@@ -640,7 +636,7 @@
     "description":"Step 2 for disabling Chrome and Safari extensions"
   },
   "disableforsafaristepone":{
-    "message":"Clique no menu Safari &rarr; Preferências &rarr; Extensões.",
+    "message":"Clique no menu Safari > Preferências > Extensões.",
     "description":"Step 1 for disabling Safari extensions"
   },
   "reenableadsonebyone":{
@@ -1123,10 +1119,6 @@
     "message":"Esconder este botão",
     "description":"Toolbar button menu entry to hide the AdBlock button"
   },
-  "spread_the_word":{
-    "message":"Ajude a espalhar a palavra!",
-    "description":"Text of a share link"
-  },
   "donate_to_adblock":{
     "message":"Ama o AdBlock? Considere doar!",
     "description":"Text of a donate link in the toolbar button menu"
@@ -1301,10 +1293,6 @@
       }
     }
   },
-  "latest_version":{
-    "message":"AdBlock está actualizado!",
-    "description":"On the Options > Support page, shows when there are no updates available for AdBlock"
-  },
   "here":{
     "message":"aqui",
     "description":"This message is injected in other strings as a link\/button"
@@ -1312,18 +1300,6 @@
   "adblocksupport":{
     "message":"Suporte AdBlock",
     "description":"Title of the support tab"
-  },
-  "checkforupdates":{
-    "message":"A verificar se há atualizações (só deve demorar alguns segundos)...",
-    "description":"Displayed when AdBlock is checking the newest available version"
-  },
-  "somethingwentwrong":{
-    "message":"Algo correu mal durante a verificação de actualizações.",
-    "description":"Displayed when AdBlock is checking the newest available version and an error occurs"
-  },
-  "checkinternetconnection":{
-    "message":"Para denunciar um anúncio, é necessário estar conectado à internet.",
-    "description":"Displayed when AdBlock is checking the newest available version and an error occurs while reporting an ad on adreport page"
   },
   "whatsnew":{
     "message":"O que há de novo na versão mais recente? Veja a [[changelog]]!",
