--- a/_locales/ru/messages.json
+++ b/_locales/ru/messages.json
@@ -660,7 +660,7 @@
     "description":"Step 2 for disabling Chrome and Safari extensions"
   },
   "disableforsafaristepone":{
-    "message":"Откройте меню Safari &rarr; Параметры &rarr; Расширения.",
+    "message":"Откройте меню Safari > Параметры > Расширения.",
     "description":"Step 1 for disabling Safari extensions"
   },
   "reenableadsonebyone":{
@@ -1011,10 +1011,6 @@
     "message":"OK, Вы все равно можете заблокировать эту рекламу для себя на странице Параметры. Спасибо!",
     "description":"Telling users who won't report an ad to us how to handle it for themselves"
   },
-  "adblock_outdated_chrome":{
-    "message":"Вы используете старую версию AdBlock. Пожалуйста, перейдите на [[страницу Расширения]], включите 'Режим разработчика' и нажмите кнопку 'Обновить расширения'",
-    "description":"Ad report page instructions to update AdBlock in Chrome. The link will point to 'chrome:\/\/chrome\/extensions\/'"
-  },
   "block_an_ad_on_this_page":{
     "message":"Блокировать рекламу на этой странице",
     "description":"Toolbar button menu entry and context menu entry"
@@ -1166,10 +1162,6 @@
   "hide_this_button":{
     "message":"Скрыть эту кнопку",
     "description":"Toolbar button menu entry to hide the AdBlock button"
-  },
-  "spread_the_word":{
-    "message":"Помогите распространить информацию!",
-    "description":"Text of a share link"
   },
   "donate_to_adblock":{
     "message":"Нравится AdBlock? Подумайте о пожертвовании!",
@@ -1361,37 +1353,13 @@
       }
     }
   },
-  "latest_version":{
-    "message":"AdBlock актуальный!",
-    "description":"On the Options > Support page, shows when there are no updates available for AdBlock"
-  },
   "here":{
     "message":"здесь",
     "description":"This message is injected in other strings as a link\/button"
   },
-  "update_available":{
-    "message":"Есть новое обновление для AdBlock! Перейдите [[сюда]] для обновления. Примечание: Если Вы хотите получать обновления автоматически, просто нажмите в Safari (в строке меню) > Настройки... > Расширения и отметьте опцию «Устанавливать обновления автоматически».",
-    "description":"On the Options > Support page, shown when there is an update available for AdBlock on Safari"
-  },
-  "ff_adblock_outdated":{
-    "message":"Вы используете старую версию AdBlock. Пожалуйста, нажмите на кнопку меню Firefox и выберите Дополнения. Затем на странице Дополнений, нажмите на значок шестеренки (инструменты для всех Дополнений) и выберите «Проверить наличие обновлений».",
-    "description":"On the Options > Support page, shows when there is an update available for AdBlock. 'Add-ons', 'Tools for all add-ons' and 'Check for Updates' should match the strings displayed by Firefox."
-  },
   "adblocksupport":{
     "message":"Поддержка AdBlock",
     "description":"Title of the support tab"
-  },
-  "checkforupdates":{
-    "message":"Проверка обновлений (займет всего несколько секунд)...",
-    "description":"Displayed when AdBlock is checking the newest available version"
-  },
-  "somethingwentwrong":{
-    "message":"Что-то пошло не так во время проверки обновлений.",
-    "description":"Displayed when AdBlock is checking the newest available version and an error occurs"
-  },
-  "checkinternetconnection":{
-    "message":"Чтобы сообщить о рекламе, необходимо подключение к Интернету.",
-    "description":"Displayed when AdBlock is checking the newest available version and an error occurs while reporting an ad on adreport page"
   },
   "whatsnew":{
     "message":"Что нового в последней версии? См. [[changelog]]!",
