--- a/_locales/uk/messages.json
+++ b/_locales/uk/messages.json
@@ -255,10 +255,6 @@
     "message":"Показувати інформацію для налагодження в Журналі Консолі (уповільнює роботу AdBlock)",
     "description":"Checkbox on the 'General' tab of the Options page"
   },
-  "datacollectionoption":{
-    "message":"Дозволити AdBlock збирати інформацію про використання списку анонімного фільтра та дані",
-    "description":"Checkbox on the 'General' tab of the Options page"
-  },
   "updatedrightnow":{
     "message":"щойно оновлено",
     "description":"Label for subscription"
@@ -648,7 +644,7 @@
     "description":"On the ad report page, alert notifying users that we've disabled all other extensions"
   },
   "disableforsafaristepone":{
-    "message":"Клацніть на меню «Safari» &rarr; «Налаштування» &rarr; «Розширення».",
+    "message":"Клацніть на меню «Safari» > «Налаштування» > «Розширення».",
     "description":"Step 1 for disabling Safari extensions"
   },
   "reenableadsonebyone":{
@@ -979,10 +975,6 @@
     "message":"Гаразд, ви все ще можете заблокувати цю рекламу лише для себе на сторінці настройок. Дякуємо!",
     "description":"Telling users who won't report an ad to us how to handle it for themselves"
   },
-  "adblock_outdated_chrome":{
-    "message":"Ви користуєтесь старою версією AdBlock. Будь ласка, перейдіть на сторінку [[розширень]], увімкніть «Режим розробника» та натисніть «Оновити розширення зараз».",
-    "description":"Ad report page instructions to update AdBlock in Chrome. The link will point to 'chrome:\/\/chrome\/extensions\/'"
-  },
   "block_an_ad_on_this_page":{
     "message":"Заблокувати рекламу на цій сторінці",
     "description":"Toolbar button menu entry and context menu entry"
@@ -1134,10 +1126,6 @@
   "hide_this_button":{
     "message":"Сховати цю кнопку",
     "description":"Toolbar button menu entry to hide the AdBlock button"
-  },
-  "spread_the_word":{
-    "message":"Допоможіть розказати всім!",
-    "description":"Text of a share link"
   },
   "donate_to_adblock":{
     "message":"Подобається AdBlock? Подумайте о пожертвуванні!",
@@ -1325,10 +1313,6 @@
       }
     }
   },
-  "latest_version":{
-    "message":"AdBlock оновлено до найсвіжішої версії!",
-    "description":"On the Options > Support page, shows when there are no updates available for AdBlock"
-  },
   "here":{
     "message":"сюди",
     "description":"This message is injected in other strings as a link\/button"
@@ -1336,18 +1320,6 @@
   "adblocksupport":{
     "message":"Підтримка користувачів AdBlock",
     "description":"Title of the support tab"
-  },
-  "checkforupdates":{
-    "message":"Перевіряю оновлення (має зайняти лиш декілька секунд)...",
-    "description":"Displayed when AdBlock is checking the newest available version"
-  },
-  "somethingwentwrong":{
-    "message":"Під час перевірки оновлень щось пішло не так.",
-    "description":"Displayed when AdBlock is checking the newest available version and an error occurs"
-  },
-  "checkinternetconnection":{
-    "message":"Щоб надіслати скаргу на рекламу, потрібне підключення до інтернету.",
-    "description":"Displayed when AdBlock is checking the newest available version and an error occurs while reporting an ad on adreport page"
   },
   "englishonly":{
     "message":"Лише англійською мовою",
