--- a/_locales/vi/messages.json
+++ b/_locales/vi/messages.json
@@ -660,7 +660,7 @@
     "description":"Step 2 for disabling Chrome and Safari extensions"
   },
   "disableforsafaristepone":{
-    "message":"Nhấp vào menu Safari chọn &rarr; Preferences &rarr; Extensions.",
+    "message":"Nhấp vào menu Safari chọn > Preferences > Extensions.",
     "description":"Step 1 for disabling Safari extensions"
   },
   "reenableadsonebyone":{
@@ -1011,10 +1011,6 @@
     "message":"Được rồi, bạn vẫn có thể chặn quảng cáo này bằng tay ở trang 'Tùy chọn'. Cảm ơn bạn!",
     "description":"Telling users who won't report an ad to us how to handle it for themselves"
   },
-  "adblock_outdated_chrome":{
-    "message":"Bạn đang sử dụng phiên bản cũ của AdBlock. Vui lòng đi đến [[tiện ích mở rộng]], bật 'Chế độ dành cho nhà phát triển' và nhấp 'Cập nhật'",
-    "description":"Ad report page instructions to update AdBlock in Chrome. The link will point to 'chrome:\/\/chrome\/extensions\/'"
-  },
   "block_an_ad_on_this_page":{
     "message":"Chặn quảng cáo trên trang này",
     "description":"Toolbar button menu entry and context menu entry"
@@ -1166,10 +1162,6 @@
   "hide_this_button":{
     "message":"Ẩn nút này",
     "description":"Toolbar button menu entry to hide the AdBlock button"
-  },
-  "spread_the_word":{
-    "message":"Chia sẻ!",
-    "description":"Text of a share link"
   },
   "donate_to_adblock":{
     "message":"Bạn có thích AdBlock? Hãy cân nhắc việc quyên góp!",
@@ -1361,37 +1353,13 @@
       }
     }
   },
-  "latest_version":{
-    "message":"AdBlock đã được cập nhật!",
-    "description":"On the Options > Support page, shows when there are no updates available for AdBlock"
-  },
   "here":{
     "message":"đây",
     "description":"This message is injected in other strings as a link\/button"
   },
-  "update_available":{
-    "message":"Đã có bản cập nhật mới cho AdBlock! Đi tới [[here]] để cập nhật.\nLưu ý: Nếu bạn muốn nhân cập nhật một cách tự động, bấm vào thanh menu trên Safari > Tùy chỉnh > Tiện ích và chọn 'Tự động câp nhật tiện ích từ Safari Extensions Gallery'.",
-    "description":"On the Options > Support page, shown when there is an update available for AdBlock on Safari"
-  },
-  "ff_adblock_outdated":{
-    "message":"Nếu bạn sử dụng phiên bản cũ của AdBlock. Vui lòng bấm vào menu Firefox và chọn Add-ons. Trong trang Add-ons, bấm vào biểu tượng bánh răng (Công cụ cho tất cả add-ons), và chọn 'Kiển tra cập nhật'.",
-    "description":"On the Options > Support page, shows when there is an update available for AdBlock. 'Add-ons', 'Tools for all add-ons' and 'Check for Updates' should match the strings displayed by Firefox."
-  },
   "adblocksupport":{
     "message":"Trung tâm hỗ trợ",
     "description":"Title of the support tab"
-  },
-  "checkforupdates":{
-    "message":"Đang kiểm tra cập nhật (chỉ mất vài giây thôi)...",
-    "description":"Displayed when AdBlock is checking the newest available version"
-  },
-  "somethingwentwrong":{
-    "message":"Đã xảy ra lỗi trong khi kiểm tra cập nhật.",
-    "description":"Displayed when AdBlock is checking the newest available version and an error occurs"
-  },
-  "checkinternetconnection":{
-    "message":"Để báo cáo một quảng cáo, bạn phải có kết nối đến internet.",
-    "description":"Displayed when AdBlock is checking the newest available version and an error occurs while reporting an ad on adreport page"
   },
   "whatsnew":{
     "message":"Có gì mới trong phiên bản mới nhất? Xem [[các thay đổi]]!",
