--- a/_locales/zh_CN/messages.json
+++ b/_locales/zh_CN/messages.json
@@ -660,7 +660,7 @@
     "description":"Step 2 for disabling Chrome and Safari extensions"
   },
   "disableforsafaristepone":{
-    "message":"单击Safari菜单 &rarr; 选项 &rarr; 扩展程序。",
+    "message":"单击Safari菜单 > 选项 > 扩展程序。",
     "description":"Step 1 for disabling Safari extensions"
   },
   "reenableadsonebyone":{
@@ -1011,10 +1011,6 @@
     "message":"好了。您仍然可以在选项中手动屏蔽此广告。 谢谢！",
     "description":"Telling users who won't report an ad to us how to handle it for themselves"
   },
-  "adblock_outdated_chrome":{
-    "message":"您正在使用旧版本的 AdBlock。请转到 [[ 扩展程序页面]]，启用“开发者模式”并单击“立即更新扩展程序”",
-    "description":"Ad report page instructions to update AdBlock in Chrome. The link will point to 'chrome:\/\/chrome\/extensions\/'"
-  },
   "block_an_ad_on_this_page":{
     "message":"屏蔽此页面上的广告",
     "description":"Toolbar button menu entry and context menu entry"
@@ -1166,10 +1162,6 @@
   "hide_this_button":{
     "message":"隐藏这个按钮",
     "description":"Toolbar button menu entry to hide the AdBlock button"
-  },
-  "spread_the_word":{
-    "message":"请帮助我们宣传AdBlock！",
-    "description":"Text of a share link"
   },
   "donate_to_adblock":{
     "message":"喜欢AdBlock吗？请考虑捐赠！",
@@ -1361,37 +1353,13 @@
       }
     }
   },
-  "latest_version":{
-    "message":"AdBlock已经是最新版！",
-    "description":"On the Options > Support page, shows when there are no updates available for AdBlock"
-  },
   "here":{
     "message":"这里",
     "description":"This message is injected in other strings as a link\/button"
   },
-  "update_available":{
-    "message":"AdBlock有新版本！[[到这里]] 更新。注意︰ 如果您想要自动更新，只需点击（菜单栏中的） Safari > 偏好设置 > 扩展中勾选“自动更新来自 Safari 扩展库的扩展”。",
-    "description":"On the Options > Support page, shown when there is an update available for AdBlock on Safari"
-  },
-  "ff_adblock_outdated":{
-    "message":"您正在使用旧版本的AdBlock 。请单击Firefox菜单按钮，并选择\"附加组件\"。在附加组件管理器页面，单击右上角的均衡器图标 (用于所有附加组件的工具)，然后选择\"检查更新\"。",
-    "description":"On the Options > Support page, shows when there is an update available for AdBlock. 'Add-ons', 'Tools for all add-ons' and 'Check for Updates' should match the strings displayed by Firefox."
-  },
   "adblocksupport":{
     "message":"AdBlock技术支持",
     "description":"Title of the support tab"
-  },
-  "checkforupdates":{
-    "message":"正在检查更新（这应当只需几秒钟）...",
-    "description":"Displayed when AdBlock is checking the newest available version"
-  },
-  "somethingwentwrong":{
-    "message":"检查更新时出错。",
-    "description":"Displayed when AdBlock is checking the newest available version and an error occurs"
-  },
-  "checkinternetconnection":{
-    "message":"要报告一个广告，您必须连接到互联网。",
-    "description":"Displayed when AdBlock is checking the newest available version and an error occurs while reporting an ad on adreport page"
   },
   "whatsnew":{
     "message":"最新的版本有什么变化？请参阅 [[更新日志]]！",
