--- a/_locales/ar/messages.json
+++ b/_locales/ar/messages.json
@@ -7,6 +7,10 @@
     "message":"الأضافة الأكثر شعبية في  Chrome، مع ما يزيد على 40 مليون مستخدم! تمنع الأعلانات في جميع أنحاء شبكة الإنترنت.",
     "description":"Extension description in manifest. Should not exceed 132 characters."
   },
+  "description_edge":{
+    "message":"AdBlock. مانع الإعلانات رقم واحد مع ما يزيد على ٢٠٠ مليون تحميل. يحجب الإعلانات في جميع أنحاء شبكة الإنترنت.",
+    "description":"Extension description in manifest. Should not exceed 132 characters."
+  },
   "adblock_click_for_details":{
     "message":"AdBlock-اضغط للتفاصيل",
     "description":"Tooltip on the AdBlock button, to help users understand that they can click the button, and that they can control the number badge that appears on the button."
@@ -35,6 +39,10 @@
     "message":"خيارات AdBlock",
     "description":"Title for the options page"
   },
+  "chromebutton_how_to_hide2":{
+    "message":"اضغط على الزر الأيمن لبرنامج AdBlock واختر 'Hide in Chrome Menu'. لإظهاره، اضغط على قائمة كروم، ومن ثم اضغط على الزر الأيمن لبرنامج AdBlock، واختر 'Keep in Toolbar'.",
+    "description":"Message explaining how to hide the AdBlock toolbar button. 'Hide Button' should match the text that Chrome displays when you right click a toolbar button."
+  },
   "operabutton_how_to_hide2":{
     "message":"لأخفاء الزر, أذهب إلي opera:\/\/extensions و علم علي \"إخفاء من شريط الأدوات\". يمكنك إظهاره مرة اخري بأغلاء تحديد هذا الخيار.",
     "description":"Message explaining how to hide the AdBlock toolbar button. 'Hide Button' should match the text that Opera displays on the Extensions page."
@@ -57,10 +65,6 @@
   },
   "blacklisteroptions1":{
     "message":"ما رأيك سوف يكون صحيحاً حول هذا الإعلان في كل مرة تقوم بزيارة هذه الصفحة؟",
-    "description":"Blacklister attribute choosing page message"
-  },
-  "blacklisternotsure":{
-    "message":"غير متأكد؟ فقط اضغط على 'منع ذلك!' أدناه.",
     "description":"Blacklister attribute choosing page message"
   },
   "blacklisterthefilter":{
@@ -107,10 +111,6 @@
       }
     }
   },
-  "blacklistersinglematch":{
-    "message":"يطابق العنصر 1 في هذه الصفحة.",
-    "description":"Tells the user only one match was found"
-  },
   "blacklistermatches":{
     "message":"يطابق $matchcount$ البنود المدرجة في هذه الصفحة.",
     "description":"Tells the user multiple matches were found",
@@ -146,10 +146,6 @@
   "buttonback":{
     "message":"رجوع",
     "description":"Back to previous wizard page button"
-  },
-  "findingads":{
-    "message":"العثور على إعلانات... \n \nفقط هذا سوف يستغرق بعض الوقت.",
-    "description":"When you press ctrl-shift-K the blacklister searches for ads"
   },
   "blockanadtitle":{
     "message":"منع الأعلان",
@@ -251,10 +247,6 @@
     "message":"إظهار بيانات التصحيح في \"سجل وحدة التحكم\" (الذي يبطئ AdBlock)",
     "description":"Checkbox on the 'General' tab of the Options page"
   },
-  "datacollectionoption":{
-    "message":"السماح لـ AdBlock بجمع بيانات واستخدام مجهولة الهوية عن قائمة التصفية",
-    "description":"Checkbox on the 'General' tab of the Options page"
-  },
   "updatedrightnow":{
     "message":"تحديث الآن",
     "description":"Label for subscription"
@@ -338,14 +330,6 @@
   "filterstabtitle":{
     "message":"الاشتراك في قوائم عامل التصفية",
     "description":"Title of the filter list tab"
-  },
-  "filterlistlink":{
-    "message":"لا تشترك على أكثر مما تحتاج  --كل واحد  يبطئ قليلاً جدا! الاعتمادات و القوائم كثيرة ويمكن الاطلاع عليها [[هنا]].",
-    "description":"Explanation of the filter lists"
-  },
-  "updatenowmessage2":{
-    "message":"أنا سوف أجلب التحديثات تلقائياً؛ يمكنك أيضا [[تحديث الآن]]",
-    "description":"Update filters text + button"
   },
   "orenteraurl":{
     "message":"أو قم بإدخال عنوان URL:",
@@ -455,10 +439,6 @@
     "message":"تعديل عوامل التصفية المعطلة:",
     "description":"Subtitle on the 'Customize' tab"
   },
-  "filtersavewarning":{
-    "message":"كن حذراً: إذا كنت تجعل من خطأ هنا الكثير من عوامل التصفية الأخرى، بما في ذلك عوامل التصفية الرسمية، يمكن الحصول على كسر جداً! \nقراءة [[دروس بناء جملة عوامل التصفية]] لمعرفة كيفية إضافة خيارات متقدمة في عوامل التصفية القائمة السوداء و عوامل التصفية القائمة البيضاء .",
-    "description":"Warning when blacklisting manually"
-  },
   "contentblockingwarning":{
     "message":"ملاحظة: Whitelisting (السماح بالإعلانات على) صفحة أو موقع لا تعمل مع تمكين حظر المحتوى في safari.",
     "description":"Notice shown on the 'Customize' tab of the options page when Safari Content Blocking is enabled"
@@ -477,10 +457,6 @@
   },
   "adreportintro":{
     "message":"وجدت إعلان على صفحة ويب؟ نحن سوف تساعدك على العثور على المكان المناسب لتقرير ذلك!",
-    "description":"Introduction of the ad reporting page"
-  },
-  "adreportvoluntary":{
-    "message":"الإبلاغ عن إعلان هو عمل تطوعي. فهو يساعد الناس الآخرين عن طريق تمكين مشرفي قائمة عامل التصفية لمنع الإعلان للجميع. إذا كنت لا تشعر بمساعدة الاخرين الآن، لا مشكلة. إغلاق هذه الصفحة و [[أمنع الاعلانات]]لنفسك فقط.",
     "description":"Introduction of the ad reporting page"
   },
   "malwarenotificationcheckboxmessage":{
@@ -503,10 +479,6 @@
     "message":"التحقق من البرامج الضارة التي يمكن تكون عن طريق الحقن الإعلانات:",
     "description":"Section header on the ad report page"
   },
-  "malwarewarning":{
-    "message":"قد يكون كمبيوترك مصاب ببرامج ضارة.  انقر [[here]] لمزيد من المعلومات.",
-    "description":"On the ad report page, the ads the user is seeing might be caused by malware\/adware"
-  },
   "malwarenotfound":{
     "message":"لم يتم العثور على malware معروف.",
     "description":"On the ad report page, the ads the user is seeing are probably not caused by malware\/adware"
@@ -514,10 +486,6 @@
   "disableaa":{
     "message":"تحقق من عوامل تصفية \"الإعلانات المقبولة\":",
     "description":"Section header on the ad report page"
-  },
-  "clickdisableaa":{
-    "message":"انقر فوق هذا: [[تعطيل إعلان المقبولة]]",
-    "description":"Instruction on ad report page"
   },
   "aamessageadreport":{
     "message":"إذا كنت لا تريد أن تري إعلانات مثل هذه، تحتاج إلي أغلاق قائمة عوامل التصفية \"مقبولة إعلان\".",
@@ -530,10 +498,6 @@
   "updateyourlists":{
     "message":"تأكد من قوائم عوامل التصفية الخاصة محدثة:",
     "description":"Section header on the ad report page"
-  },
-  "clickupdatefilters":{
-    "message":"انقر فوق هذا الخيار: [[تحديث عوامل تصفيتي!]]",
-    "description":"Instruction on ad report page"
   },
   "reloadadpage":{
     "message":"إعادة تحميل الصفحة مع الإعلان.",
@@ -559,10 +523,6 @@
     "message":"تعطيل كافة ملحقات باستثناء AdBlock:",
     "description":"Instruction on ad report page"
   },
-  "clickdisableotherextensions":{
-    "message":"أو، فقط انقر فوق هذا الزر لتمكيننا من القيام بكل ما ورد أعلاه: [[تعطيل كافة ملحقات أخرى]]",
-    "description":"On the ad report page, an alternative way to disable other extensions"
-  },
   "disableotherextensionscomplete":{
     "message":"لقد عطلنا كافة الملحقات الأخرى. وسوف نقوم بإعادة تحميل الصفحة مع الإعلان. ثانية واحدة، من فضلك.",
     "description":"On the ad report page, alert notifying users that we've disabled all other extensions"
@@ -578,14 +538,6 @@
   "tabreloadcomplete":{
     "message":"تم! لقد تم إعادة تحميل الصفحة مع الإعلان. الرجاء التحقق من تلك الصفحة لمعرفة إذا ما كان الإعلان قد انتهى أم لا. ثم العودة إلى هذه الصفحة، والإجابة على هذا السؤال أدناه.",
     "description":"On the ad report page, alert notifying users that we've disabled all other extensions"
-  },
-  "disableforchromeandsafaristeptwo":{
-    "message":"قم بإلغاء تحديد خانة الاختيار 'تمكين' بجوار كل ملحق باستثناء ل AdBlock.  تمكين ترك AdBlock.",
-    "description":"Step 2 for disabling Chrome and Safari extensions"
-  },
-  "disableforsafaristepone":{
-    "message":"انقر فوق القائمة Safari &rarr; تفضيلات &rarr; ملحقات.",
-    "description":"Step 1 for disabling Safari extensions"
   },
   "reenableadsonebyone":{
     "message":"عظيم! الآن دعنا نكتشف أي ملحق هو السبب. من خلال الذهاب وتمكين كل ملحق واحداً تلو الآخر. الملحق الذي يعيد مستحق هو الذي تحتاج إلى إلغاء تثبيت للتخلص من الإعلانات.",
@@ -799,14 +751,6 @@
     "message":"الأخرى",
     "description":"Multiple choice option"
   },
-  "orchrome":{
-    "message":"أو الكروم",
-    "description":"Used for placeholder in checkinfirefoxtitle and checkinfirefox_1 strings"
-  },
-  "oradblockforchrome":{
-    "message":"أو AdBlock لكروم",
-    "description":"Used for placeholder in checkinfirefox_2 string"
-  },
   "retryaftersubscribe":{
     "message":"اشترك في قائمة عوامل التصفية هذه، ثم حاول مرة أخرى: $list_title$",
     "description":"Instructions on ad report page telling users to subscribe to a filter list and then check again to see whether the ad exists",
@@ -816,18 +760,6 @@
         "example":"French filters"
       }
     }
-  },
-  "checkinfirefoxtitle":{
-    "message":"تحقق في Firefox",
-    "description":"Tell a user to see if a reported ad also appears in Firefox\/Chrome"
-  },
-  "checkinfirefox_1":{
-    "message":"تثبيت Firefox إذا لم يكن لديك ذلك.",
-    "description":"instruction for how to check Firefox\/Chrome for a reported ad"
-  },
-  "checkinfirefox_2":{
-    "message":"ثبت Adblock Plus لي Firefox اذا لم يكون لديك.",
-    "description":"Instruction for how to check Firefox\/Chrome for a reported ad. Don't translate the name 'Adblock Plus'."
   },
   "checkinfirefox_3":{
     "message":"في هذا المتصفح، اشترك في نفس قوائم عوامل التصفية كما لديك هنا.",
@@ -882,10 +814,6 @@
   "fixityourself":{
     "message":"حسنا، يمكنك لا يزال حظر هذا الإعلان لنفسك في صفحة خيارات. شكرا!",
     "description":"Telling users who won't report an ad to us how to handle it for themselves"
-  },
-  "adblock_outdated_chrome":{
-    "message":"أنك تستخدم نسخة قديمة من AdBlock. الرجاء الذهاب إلى [[ صفحة الإضافات]]، تمكين 'وضع المطور' وانقر فوق 'تحديث ملحقات الآن'",
-    "description":"Ad report page instructions to update AdBlock in Chrome. The link will point to 'chrome:\/\/chrome\/extensions\/'"
   },
   "block_an_ad_on_this_page":{
     "message":"منع الأعلانات على هذه الصفحة",
@@ -1031,10 +959,6 @@
     "message":"إخفاء هذا الزر",
     "description":"Toolbar button menu entry to hide the AdBlock button"
   },
-  "spread_the_word":{
-    "message":"المساعدة في نشر الكلمة!",
-    "description":"Text of a share link"
-  },
   "pwyw":{
     "message":"ادفع ما تريد!",
     "description":"Text of a payment request link"
@@ -1071,10 +995,6 @@
     "message":"الصفحة:",
     "description":"Caption for the whitelist wizard slider that modifies the path part of a URL"
   },
-  "show_ads_except_for":{
-    "message":"وتظهر الإعلانات في كل مكان باستثناء هذه المجالات...",
-    "description":"Section title for blacklisting section of Customize tab"
-  },
   "only_block_ads_on_these_sites":{
     "message":"فقط منع الإعلانات في هذه المواقع:",
     "description":"Label for textbox where user enters a list of sites on Customize tab"
@@ -1083,17 +1003,9 @@
     "message":"تنسيق: ~موقع1.com|~موقع2.com|~اخبار.موقع3.org",
     "description":"Example showing users how to input a list of sites on the Customize tab. You can translate the 'news' and 'siteN' but leave the '|'s and '~'s in place."
   },
-  "warning_overrules_filters":{
-    "message":"تحذير: في جميع المواقع الأخرى سوف تشاهد الإعلانات!\nهذا يلغي كافة عوامل التصفية الأخرى لتلك المواقع.",
-    "description":"Message on the 'Customize' tab of the options page, explaining the danger of adding a blacklisting filter"
-  },
   "storage_quota_exceeded":{
     "message":"يمكنك تجاوز كمية التخزين يمكن استخدام AdBlock. يرجى إلغاء الاشتراك من قوائم عوامل تصفية بعض!",
     "description":"Message shown when the user uses more storage than allowed by the browser"
-  },
-  "safari50_updatenotice":{
-    "message":"أنك تستخدم نسخة قديمة من Safari. الحصول على أحدث إصدار من أجل استخدام زر شريط الأدوات \"AdBlock\" إلى وقفه AdBlock والمواقع القائمة البيضاء، وإعلان التقرير. [[الترقية الآن]].",
-    "description":"A message shown to Safari 5.0 users urging them to upgrade"
   },
   "firefox_explanation":{
     "message":"والغرض من هذا السؤال لتحديد الذين ينبغي أن تلقي التقرير الخاص بك. إذا كان يمكنك الإجابة على هذا السؤال بشكل غير صحيح، سيتم إرسال التقرير إلى الأشخاص الخطأ، حيث أنها قد تحصل على تجاهلها.",
@@ -1143,20 +1055,6 @@
     "message":"قوائم عامل التصفية مخصصة",
     "description":"List for custom filters the user subscribed to"
   },
-  "customfilterserrormessage":{
-    "message":"عامل التصفية التالية: \n $filter$ \n يحتوي علي خطأ: \n $message$",
-    "description":"Error message when there is an issue with a custom filter on the 'Customize' tab of the Options page",
-    "placeholders":{
-      "filter":{
-        "content":"$1",
-        "example":"@@.ad"
-      },
-      "message":{
-        "content":"$2",
-        "example":"invalid filter"
-      }
-    }
-  },
   "languagedropdowndescription":{
     "message":"إضافة عوامل تصفية للغة أخرى: ",
     "description":"Dropdown list for language-specific filters"
@@ -1166,7 +1064,7 @@
     "description":"Text of a link pointing to the explanation of a new feature"
   },
   "selectlanguage":{
-    "message":" --حدد اللغة -- ",
+    "message":" --حدد اللغة -- ",
     "description":"Text for the first option in Langage Dropdown for Filter Lists tab in options. Include the ' -- ' on either side of your translation."
   },
   "whitelist_youtube_channel":{
@@ -1193,10 +1091,6 @@
       }
     }
   },
-  "latest_version":{
-    "message":"AdBlock متحدث!",
-    "description":"On the Options > Support page, shows when there are no updates available for AdBlock"
-  },
   "here":{
     "message":"هنا",
     "description":"This message is injected in other strings as a link\/button"
@@ -1204,22 +1098,6 @@
   "adblocksupport":{
     "message":"دعم AdBlock",
     "description":"Title of the support tab"
-  },
-  "checkforupdates":{
-    "message":"التحقق من وجود تحديثات (ينبغي أن يستغرق بضع ثوان فقط)...",
-    "description":"Displayed when AdBlock is checking the newest available version"
-  },
-  "somethingwentwrong":{
-    "message":"حدث خطأ أثناء التحقق من وجود تحديثات.",
-    "description":"Displayed when AdBlock is checking the newest available version and an error occurs"
-  },
-  "checkinternetconnection":{
-    "message":"لتقديم تقرير مختصص، يجب الاتصال بالإنترنت.",
-    "description":"Displayed when AdBlock is checking the newest available version and an error occurs while reporting an ad on adreport page"
-  },
-  "whatsnew":{
-    "message":"ما هو الجديد في الإصدار الأخير؟ راجع [[ سجل التحديثات]]!",
-    "description":"Link to display the changelog on the Support tab of the options"
   },
   "englishonly":{
     "message":"الإنجليزية فقط",
@@ -1241,32 +1119,12 @@
     "message":"عندك سؤال أو فكرة جديدة؟",
     "description":"Subtitle on the Support tab of the options"
   },
-  "sourcecode":{
-    "message":"شفرة المصدر [[متاحة بحرية]]!",
-    "description":"Link to the source code of AdBlock on the Support tab of the options"
-  },
-  "debuginfo":{
-    "message":"هل طلب فريقنا بعض معلومات التصحيح؟ انقر [[ هنا]] للحصول على ذلك!",
-    "description":"Users can click this link to provide debug information to AdBlock staff"
-  },
-  "supportsite":{
-    "message":"اسمحوا لنا أن نعرف في [[الموقعنا]]!",
-    "description":"Link to the support site on the Support tab of the options"
-  },
-  "ad_report_please":{
-    "message":"إذا كنت تشاهد أحد إعلانات، لا تقدم تقرير عن الأخطاء، قدم [[تقرير اعلاني]]!",
-    "description":"Link to the ad report page on our support site. This is found on the Support tab of the options."
-  },
   "resourceblocktitle":{
     "message":"جميع الموارد",
     "description":"Resource list page name"
   },
   "headerresource":{
     "message":"المورد",
-    "description":"Resource list page: title of a column"
-  },
-  "headertype":{
-    "message":"نوع",
     "description":"Resource list page: title of a column"
   },
   "headerfilter":{
@@ -1303,14 +1161,6 @@
   },
   "typeselector":{
     "message":"محدد",
-    "description":"A resource type"
-  },
-  "typesub_frame":{
-    "message":"الإطار",
-    "description":"A resource type"
-  },
-  "typemain_frame":{
-    "message":"الصفحة",
     "description":"A resource type"
   },
   "topframe":{
@@ -1360,9 +1210,5 @@
   "acceptableadsdisable_how_to_reenable":{
     "message":"يمكنك تشغيل هذا مرة أخرى ودعم المواقع التي تحب عن طريق تحديد \"السماح لبعض الإعلانات غير تدخلية\" أدناه.",
     "description":"Message shown to users after disabling Acceptable Ads via update page."
-  },
-  "buttonsubmit":{
-    "message":"تأكيد",
-    "description":"Button to send a form."
   }
 }
