--- a/_locales/ca/messages.json
+++ b/_locales/ca/messages.json
@@ -7,6 +7,10 @@
     "message":"L'extensió més popular de Chrome, amb més de 40 milions d'usuaris! Bloqueja els anuncis de tota la xarxa.",
     "description":"Extension description in manifest. Should not exceed 132 characters."
   },
+  "description_edge":{
+    "message":"AdBlock. El millor bloquejador de publicitat amb més de 200 milions de baixades. Bloqueja tota la publicitat del web.",
+    "description":"Extension description in manifest. Should not exceed 132 characters."
+  },
   "adblock_click_for_details":{
     "message":"AdBlock – cliqueu per obtenir més detalls",
     "description":"Tooltip on the AdBlock button, to help users understand that they can click the button, and that they can control the number badge that appears on the button."
@@ -64,7 +68,7 @@
     "description":"Blacklister attribute choosing page message"
   },
   "blacklisternotsure":{
-    "message":"No n'esteu segurs?doncs premeu 'Bloquejar-ho!' a continuació.",
+    "message":"No n'esteu segurs? doncs premeu 'Bloquejar-ho!' a continuació.",
     "description":"Blacklister attribute choosing page message"
   },
   "blacklisterthefilter":{
@@ -256,7 +260,7 @@
     "description":"Checkbox on the 'General' tab of the Options page"
   },
   "datacollectionoption":{
-    "message":"Permet que l'AdBlock reculli anònimament dades i ús de les llistes de filtres",
+    "message":"Permetre a AdBlock recopilar dades d'ús de la llista de filtres anònims i informació sobre contingut bloquejat per llistes de filtres",
     "description":"Checkbox on the 'General' tab of the Options page"
   },
   "updatedrightnow":{
@@ -596,7 +600,7 @@
     "description":"Step 2 for disabling Chrome and Safari extensions"
   },
   "disableforsafaristepone":{
-    "message":"Feu clic al menú de Safari &rarr; Preferències &rarr; Ampliacions.",
+    "message":"Feu clic al menú de Safari > Preferències > Ampliacions.",
     "description":"Step 1 for disabling Safari extensions"
   },
   "reenableadsonebyone":{
@@ -811,14 +815,6 @@
     "message":"Altres",
     "description":"Multiple choice option"
   },
-  "orchrome":{
-    "message":"o bé Chrome",
-    "description":"Used for placeholder in checkinfirefoxtitle and checkinfirefox_1 strings"
-  },
-  "oradblockforchrome":{
-    "message":"o bé AdBlock per a Chrome",
-    "description":"Used for placeholder in checkinfirefox_2 string"
-  },
   "retryaftersubscribe":{
     "message":"Subscriviu-vos a aquesta llista de filtres, llavors torneu-ho a intentar: $list_title$",
     "description":"Instructions on ad report page telling users to subscribe to a filter list and then check again to see whether the ad exists",
@@ -830,16 +826,16 @@
     }
   },
   "checkinfirefoxtitle":{
-    "message":"Comproveu-ho al Firefox ",
-    "description":"Tell a user to see if a reported ad also appears in Firefox\/Chrome"
+    "message":"Comproveu-ho al Firefox",
+    "description":"Tell a user to see if a reported ad also appears in Firefox"
   },
   "checkinfirefox_1":{
     "message":"Baixeu-vos el Firefox si no el teniu.",
-    "description":"instruction for how to check Firefox\/Chrome for a reported ad"
+    "description":"instruction for how to check Firefox for a reported ad"
   },
   "checkinfirefox_2":{
     "message":"Instal·leu-vos l'Adblock Plus per a Firefox si no el teniu.",
-    "description":"Instruction for how to check Firefox\/Chrome for a reported ad. Don't translate the name 'Adblock Plus'."
+    "description":"Instruction for how to check Firefox for a reported ad. Don't translate the name 'Adblock Plus'."
   },
   "checkinfirefox_3":{
     "message":"En aquell navegador, subscriviu-vos a les mateixes listes de filtres que teniu aquí.",
@@ -894,10 +890,6 @@
   "fixityourself":{
     "message":"D'acord, encara podeu bloquejar aquest anunci vosaltres mateixos a la pàgina d'opcions. Gràcies!",
     "description":"Telling users who won't report an ad to us how to handle it for themselves"
-  },
-  "adblock_outdated_chrome":{
-    "message":"Esteu utilitzant una versió antiga d'AdBlock. Aneu a la [[pàgina d'extensions]], activeu el 'mode de desenvolupador' i cliqueu 'actualitza les extensions ara'",
-    "description":"Ad report page instructions to update AdBlock in Chrome. The link will point to 'chrome:\/\/chrome\/extensions\/'"
   },
   "block_an_ad_on_this_page":{
     "message":"Bloquejar un anunci en aquesta pàgina",
@@ -1046,10 +1038,6 @@
   "hide_this_button":{
     "message":"Amagar aquest botó",
     "description":"Toolbar button menu entry to hide the AdBlock button"
-  },
-  "spread_the_word":{
-    "message":"Ajudeu a fer córrer la veu!",
-    "description":"Text of a share link"
   },
   "pwyw":{
     "message":"Pagueu el que desitgeu!",
@@ -1213,10 +1201,6 @@
       }
     }
   },
-  "latest_version":{
-    "message":"L'AdBlock està actualitzat!",
-    "description":"On the Options > Support page, shows when there are no updates available for AdBlock"
-  },
   "here":{
     "message":"aquí",
     "description":"This message is injected in other strings as a link\/button"
@@ -1224,18 +1208,6 @@
   "adblocksupport":{
     "message":"Suport d'AdBlock",
     "description":"Title of the support tab"
-  },
-  "checkforupdates":{
-    "message":"Comprovant l'existència d'actualitzacions (pot tardar pocs segons)...",
-    "description":"Displayed when AdBlock is checking the newest available version"
-  },
-  "somethingwentwrong":{
-    "message":"Quelcom ha anat malament durant la comprovació d'actualitzacions.",
-    "description":"Displayed when AdBlock is checking the newest available version and an error occurs"
-  },
-  "checkinternetconnection":{
-    "message":"Per informar sobre un anunci, heu d'estar connectats a internet.",
-    "description":"Displayed when AdBlock is checking the newest available version and an error occurs while reporting an ad on adreport page"
   },
   "whatsnew":{
     "message":"Què hi ha de nou en l'últim llançament? Vegeu [[el conjunt de canvis]]!",
@@ -1386,7 +1358,7 @@
     "description":"Message shown to users after disabling Acceptable Ads via update page."
   },
   "acceptable_ads_content_blocking_disbled_message":{
-    "message":"Hem cancel·lat la seva subscripció dels anuncis acceptables, ja que heu activat el bloqueig de contingut de Safari. Només en podeu seleccionar un a la vegada. ([[ Per què? ]])",
+    "message":"Hem cancel·lat la seva subscripció dels anuncis acceptables, ja que heu activat el bloqueig de contingut de Safari. Només en podeu seleccionar un a la vegada. ([[Per què?]])",
     "description":"Warning shown when Safari Content Blocking is enabled while the Acceptable Ads filter list was already enabled."
   },
   "content_blocking_acceptable_ads_disbled_message":{
