--- a/_locales/cs/messages.json
+++ b/_locales/cs/messages.json
@@ -516,7 +516,7 @@
     "description":"Step 2 for disabling Chrome and Safari extensions"
   },
   "disableforsafaristepone":{
-    "message":"Klikněte na menu Safari &rarr; Nastavení &rarr; Rozšíření.",
+    "message":"Klikněte na menu Safari > Nastavení > Rozšíření.",
     "description":"Step 1 for disabling Safari extensions"
   },
   "pagelanguagecheck":{
@@ -691,14 +691,6 @@
     "message":"Jiný",
     "description":"Multiple choice option"
   },
-  "orchrome":{
-    "message":"nebo Chrome",
-    "description":"Used for placeholder in checkinfirefoxtitle and checkinfirefox_1 strings"
-  },
-  "oradblockforchrome":{
-    "message":"nebo AdBlock pro Chrome",
-    "description":"Used for placeholder in checkinfirefox_2 string"
-  },
   "retryaftersubscribe":{
     "message":"Přihlaste se k odběru tohoto seznamu filtrů a zkuste to znovu: $list_title$",
     "description":"Instructions on ad report page telling users to subscribe to a filter list and then check again to see whether the ad exists",
@@ -711,11 +703,11 @@
   },
   "checkinfirefoxtitle":{
     "message":"Kontrola v prohlížeči Firefox ",
-    "description":"Tell a user to see if a reported ad also appears in Firefox\/Chrome"
+    "description":"Tell a user to see if a reported ad also appears in Firefox"
   },
   "checkinfirefox_1":{
     "message":"Nainstalujte prohlížeč Firefox, pokud jej nemáte.",
-    "description":"instruction for how to check Firefox\/Chrome for a reported ad"
+    "description":"instruction for how to check Firefox for a reported ad"
   },
   "checkinfirefox_3":{
     "message":"V kýženém prohlížeči se přihlašte ke stejnému seznamu filtrů, jaký máte zde.",
@@ -770,10 +762,6 @@
   "fixityourself":{
     "message":"OK, můžete si zablokovat tuto reklamu pouze pro sebe v Nastavení na záložce Vlastní filtr. Díky!",
     "description":"Telling users who won't report an ad to us how to handle it for themselves"
-  },
-  "adblock_outdated_chrome":{
-    "message":"Používáte starou verzi AdBlock. Prosím, jděte na stránku [[Rozšíření]], povolte 'Režim pro vývojáře' a klikněte na 'Aktualizovat rozšíření'",
-    "description":"Ad report page instructions to update AdBlock in Chrome. The link will point to 'chrome:\/\/chrome\/extensions\/'"
   },
   "block_an_ad_on_this_page":{
     "message":"Blokovat reklamu na této stránce",
@@ -902,10 +890,6 @@
   "hide_this_button":{
     "message":"Skrýt toto tlačítko",
     "description":"Toolbar button menu entry to hide the AdBlock button"
-  },
-  "spread_the_word":{
-    "message":"Pomozte nám rozšířit povědomí!",
-    "description":"Text of a share link"
   },
   "pwyw":{
     "message":"Zaplať kolik chceš!",
@@ -1061,10 +1045,6 @@
       }
     }
   },
-  "latest_version":{
-    "message":"AdBlock je aktuální!",
-    "description":"On the Options > Support page, shows when there are no updates available for AdBlock"
-  },
   "here":{
     "message":"zde",
     "description":"This message is injected in other strings as a link\/button"
@@ -1072,18 +1052,6 @@
   "adblocksupport":{
     "message":"Podpora AdBlock",
     "description":"Title of the support tab"
-  },
-  "checkforupdates":{
-    "message":"Kontrola aktualizací (toto zabere jen pár sekund)...",
-    "description":"Displayed when AdBlock is checking the newest available version"
-  },
-  "somethingwentwrong":{
-    "message":"Něco se pokazilo při kontrole aktualizací.",
-    "description":"Displayed when AdBlock is checking the newest available version and an error occurs"
-  },
-  "checkinternetconnection":{
-    "message":"Pro nahlášení reklamy musíte být připojen k internetu.",
-    "description":"Displayed when AdBlock is checking the newest available version and an error occurs while reporting an ad on adreport page"
   },
   "whatsnew":{
     "message":"Co je nového v poslední verzi? Viz [[changelog]]!",
@@ -1124,10 +1092,6 @@
   "ad_report_please":{
     "message":"Jestli vidíte reklamu, neposílejte hlášení o chybě, pošlete [[hlášení o reklamě]]!",
     "description":"Link to the ad report page on our support site. This is found on the Support tab of the options."
-  },
-  "headertype":{
-    "message":"Typ",
-    "description":"Resource list page: title of a column"
   },
   "typesub_frame":{
     "message":"rámec",
