--- a/_locales/de/messages.json
+++ b/_locales/de/messages.json
@@ -259,10 +259,6 @@
     "message":"Debug-Berichte in der Fehlerkonsole anzeigen (verlangsamt AdBlock)",
     "description":"Checkbox on the 'General' tab of the Options page"
   },
-  "datacollectionoption":{
-    "message":"AdBlock erlauben anonyme Filterlistennutzung und andere anonyme Nutzungsdaten zu sammeln",
-    "description":"Checkbox on the 'General' tab of the Options page"
-  },
   "updatedrightnow":{
     "message":"jetzt aktualisiert",
     "description":"Label for subscription"
@@ -572,7 +568,7 @@
     "description":"Section header on the ad report page"
   },
   "malwarewarning":{
-    "message":"Ihr Computer ist möglicherweise mit Malware infiziert.  Klicken Sie [[hier]] für weitere Informationen.",
+    "message":"Ihr Computer ist möglicherweise mit Malware infiziert. Klicken Sie [[hier]] für weitere Informationen.",
     "description":"On the ad report page, the ads the user is seeing might be caused by malware\/adware"
   },
   "malwarenotfound":{
@@ -628,7 +624,7 @@
     "description":"Instruction on ad report page"
   },
   "disableforchromestepone":{
-    "message":"Öffnen Sie die [[ Erweiterungen Seite]].",
+    "message":"Öffnen Sie die [[Erweiterungen Seite]].",
     "description":"Step 1 for disabling Chrome extensions"
   },
   "clickdisableotherextensions":{
@@ -656,7 +652,7 @@
     "description":"Step 2 for disabling Chrome and Safari extensions"
   },
   "disableforsafaristepone":{
-    "message":"Klicken Sie auf Safari (Menübar) &rarr; Einstellungen ... &rarr; Erweiterungen.",
+    "message":"Klicken Sie auf Safari (Menübar) > Einstellungen ... > Erweiterungen.",
     "description":"Step 1 for disabling Safari extensions"
   },
   "reenableadsonebyone":{
@@ -915,14 +911,6 @@
     "message":"nichtgelistete Sprache",
     "description":"Multiple choice option"
   },
-  "orchrome":{
-    "message":"oder Chrome",
-    "description":"Used for placeholder in checkinfirefoxtitle and checkinfirefox_1 strings"
-  },
-  "oradblockforchrome":{
-    "message":"oder AdBlock für Chrome",
-    "description":"Used for placeholder in checkinfirefox_2 string"
-  },
   "retryaftersubscribe":{
     "message":"Bitte abonnieren Sie diese Filterliste und versuchen Sie es erneut: $list_title$",
     "description":"Instructions on ad report page telling users to subscribe to a filter list and then check again to see whether the ad exists",
@@ -934,16 +922,16 @@
     }
   },
   "checkinfirefoxtitle":{
-    "message":"In Firefox  überprüfen",
-    "description":"Tell a user to see if a reported ad also appears in Firefox\/Chrome"
+    "message":"In Firefox überprüfen",
+    "description":"Tell a user to see if a reported ad also appears in Firefox"
   },
   "checkinfirefox_1":{
     "message":"Installieren Sie Firefox, falls Sie es noch nicht installiert haben.",
-    "description":"instruction for how to check Firefox\/Chrome for a reported ad"
+    "description":"instruction for how to check Firefox for a reported ad"
   },
   "checkinfirefox_2":{
     "message":"Installieren Sie Adblock Plus für Firefox, falls Sie es noch nicht installiert haben.",
-    "description":"Instruction for how to check Firefox\/Chrome for a reported ad. Don't translate the name 'Adblock Plus'."
+    "description":"Instruction for how to check Firefox for a reported ad. Don't translate the name 'Adblock Plus'."
   },
   "checkinfirefox_3":{
     "message":"Abonnieren Sie in diesem Browser dieselben Filterlisten, die Sie hier abonniert haben.",
@@ -998,10 +986,6 @@
   "fixityourself":{
     "message":"Sie können die Werbung auch im Tab 'Anpassen' der AdBlock-Einstellungen entfernen. Danke!",
     "description":"Telling users who won't report an ad to us how to handle it for themselves"
-  },
-  "adblock_outdated_chrome":{
-    "message":"Sie benutzen eine veraltete Version von AdBlock. Bitte rufen Sie die [[Erweiterungen-Seite]] auf, aktivieren Sie den \"Entwicklermodus\" und klicken Sie auf \"Erweiterungen jetzt aktualisieren\".",
-    "description":"Ad report page instructions to update AdBlock in Chrome. The link will point to 'chrome:\/\/chrome\/extensions\/'"
   },
   "block_an_ad_on_this_page":{
     "message":"Werbung auf dieser Seite entfernen",
@@ -1154,10 +1138,6 @@
   "hide_this_button":{
     "message":"Diesen Button ausblenden",
     "description":"Toolbar button menu entry to hide the AdBlock button"
-  },
-  "spread_the_word":{
-    "message":"Teilen Sie es mit ihren Freunden!",
-    "description":"Text of a share link"
   },
   "donate_to_adblock":{
     "message":"Sie lieben AdBlock? Erwägen Sie eine Spende!",
@@ -1337,10 +1317,6 @@
       }
     }
   },
-  "latest_version":{
-    "message":"Keine Updates für AdBlock verfügar.",
-    "description":"On the Options > Support page, shows when there are no updates available for AdBlock"
-  },
   "here":{
     "message":"hier",
     "description":"This message is injected in other strings as a link\/button"
@@ -1348,18 +1324,6 @@
   "adblocksupport":{
     "message":"AdBlock Support",
     "description":"Title of the support tab"
-  },
-  "checkforupdates":{
-    "message":"Updates werden abgefragt (dauert nur wenige Sekunden)...",
-    "description":"Displayed when AdBlock is checking the newest available version"
-  },
-  "somethingwentwrong":{
-    "message":"Bei der Überprüfung auf Updates ist ein Fehler aufgetreten.",
-    "description":"Displayed when AdBlock is checking the newest available version and an error occurs"
-  },
-  "checkinternetconnection":{
-    "message":"Um Werbung zu melden muss eine Internetverbindung bestehen.",
-    "description":"Displayed when AdBlock is checking the newest available version and an error occurs while reporting an ad on adreport page"
   },
   "whatsnew":{
     "message":"Die Änderungen der aktuellen Version von AdBlock können im [[Changelog]] eingesehen werden.",
@@ -1390,7 +1354,7 @@
     "description":"Link to the source code of AdBlock on the Support tab of the options"
   },
   "debuginfo":{
-    "message":"Hat unser Team Sie nach Debug-Informationen gefragt? Klicken Sie  [[hier]] um die Informationen anzuzeigen.",
+    "message":"Hat unser Team Sie nach Debug-Informationen gefragt? Klicken Sie [[hier]] um die Informationen anzuzeigen.",
     "description":"Users can click this link to provide debug information to AdBlock staff"
   },
   "bugreport":{
