--- a/_locales/en_US/messages.json
+++ b/_locales/en_US/messages.json
@@ -660,7 +660,7 @@
     "description":"Step 2 for disabling Chrome and Safari extensions"
   },
   "disableforsafaristepone":{
-    "message":"Click the Safari menu &rarr; Preferences &rarr; Extensions.",
+    "message":"Click the Safari menu > Preferences > Extensions.",
     "description":"Step 1 for disabling Safari extensions"
   },
   "reenableadsonebyone":{
@@ -1011,10 +1011,6 @@
     "message":"OK, you can still block this ad for yourself on the Options page. Thanks!",
     "description":"Telling users who won't report an ad to us how to handle it for themselves"
   },
-  "adblock_outdated_chrome":{
-    "message":"You are using an old version of AdBlock. Please go to [[the extensions page]], enable 'Developer mode' and click 'Update extensions now'",
-    "description":"Ad report page instructions to update AdBlock in Chrome. The link will point to 'chrome:\/\/chrome\/extensions\/'"
-  },
   "block_an_ad_on_this_page":{
     "message":"Block an ad on this page",
     "description":"Toolbar button menu entry and context menu entry"
@@ -1166,10 +1162,6 @@
   "hide_this_button":{
     "message":"Hide this button",
     "description":"Toolbar button menu entry to hide the AdBlock button"
-  },
-  "spread_the_word":{
-    "message":"Help spread the word!",
-    "description":"Text of a share link"
   },
   "donate_to_adblock":{
     "message":"Love AdBlock? Consider donating!",
@@ -1361,37 +1353,13 @@
       }
     }
   },
-  "latest_version":{
-    "message":"AdBlock is up-to-date!",
-    "description":"On the Options > Support page, shows when there are no updates available for AdBlock"
-  },
   "here":{
     "message":"here",
     "description":"This message is injected in other strings as a link\/button"
   },
-  "update_available":{
-    "message":"There's an update for AdBlock! Go [[here]] to update.\nNote: If you want to receive updates automatically, just click on Safari (in the menu bar) > Preferences > Extensions\nand check option 'Automatically update extensions from the Safari Extensions Gallery'.",
-    "description":"On the Options > Support page, shown when there is an update available for AdBlock on Safari"
-  },
-  "ff_adblock_outdated":{
-    "message":"You are using an old version of AdBlock. Please click the Firefox menu button and choose Add-ons. Then on the Add-ons page, click the gear icon (Tools for all add-ons), and choose 'Check for Updates'.",
-    "description":"On the Options > Support page, shows when there is an update available for AdBlock. 'Add-ons', 'Tools for all add-ons' and 'Check for Updates' should match the strings displayed by Firefox."
-  },
   "adblocksupport":{
     "message":"AdBlock Support",
     "description":"Title of the support tab"
-  },
-  "checkforupdates":{
-    "message":"Checking for updates (should only take a few seconds)...",
-    "description":"Displayed when AdBlock is checking the newest available version"
-  },
-  "somethingwentwrong":{
-    "message":"Something went wrong while checking updates.",
-    "description":"Displayed when AdBlock is checking the newest available version and an error occurs"
-  },
-  "checkinternetconnection":{
-    "message":"To report an ad, you must be connected to the Internet.",
-    "description":"Displayed when AdBlock is checking the newest available version and an error occurs while reporting an ad on adreport page"
   },
   "whatsnew":{
     "message":"What's new in the latest release? See the [[changelog]]!",
