--- a/_locales/id/messages.json
+++ b/_locales/id/messages.json
@@ -247,10 +247,6 @@
     "message":"Perlihatkan pernyataan debug pada Console Log (akan memperlambat AdBlock)",
     "description":"Checkbox on the 'General' tab of the Options page"
   },
-  "datacollectionoption":{
-    "message":"Ijinkan AdBlock untuk mengumpulkan data dan penggunaan daftar filter secara anonim",
-    "description":"Checkbox on the 'General' tab of the Options page"
-  },
   "updatedrightnow":{
     "message":"diperbaharui sekarang",
     "description":"Label for subscription"
@@ -357,6 +353,10 @@
   },
   "filterantisocial":{
     "message":"Daftar Antisocial filter (hapus tombol social media)",
+    "description":"A filter list"
+  },
+  "filteracceptable_ads":{
+    "message":"Iklan Yang Diperbolehkan",
     "description":"A filter list"
   },
   "filterrussian":{
@@ -572,7 +572,7 @@
     "description":"Step 2 for disabling Chrome and Safari extensions"
   },
   "disableforsafaristepone":{
-    "message":"Klik pada menu Safari &rarr; Preferences &rarr; Extension.",
+    "message":"Klik pada menu Safari > Preferences > Extension.",
     "description":"Step 1 for disabling Safari extensions"
   },
   "reenableadsonebyone":{
@@ -787,14 +787,6 @@
     "message":"Yang lain",
     "description":"Multiple choice option"
   },
-  "orchrome":{
-    "message":"atau Chrome",
-    "description":"Used for placeholder in checkinfirefoxtitle and checkinfirefox_1 strings"
-  },
-  "oradblockforchrome":{
-    "message":"atau AdBlock untukChrome",
-    "description":"Used for placeholder in checkinfirefox_2 string"
-  },
   "retryaftersubscribe":{
     "message":"Berlangganan pada daftar filter ini, lalu coba lagi: $list_title$",
     "description":"Instructions on ad report page telling users to subscribe to a filter list and then check again to see whether the ad exists",
@@ -806,16 +798,16 @@
     }
   },
   "checkinfirefoxtitle":{
-    "message":"Periksa di Firefox ",
-    "description":"Tell a user to see if a reported ad also appears in Firefox\/Chrome"
+    "message":"Periksa di Firefox",
+    "description":"Tell a user to see if a reported ad also appears in Firefox"
   },
   "checkinfirefox_1":{
     "message":"Pasang Firefox jika anda tidak memilikinya.",
-    "description":"instruction for how to check Firefox\/Chrome for a reported ad"
+    "description":"instruction for how to check Firefox for a reported ad"
   },
   "checkinfirefox_2":{
     "message":"Pasang AdBlock Plus untuk Firefox jika Anda tidak memilikinya.",
-    "description":"Instruction for how to check Firefox\/Chrome for a reported ad. Don't translate the name 'Adblock Plus'."
+    "description":"Instruction for how to check Firefox for a reported ad. Don't translate the name 'Adblock Plus'."
   },
   "checkinfirefox_3":{
     "message":"Di peramban itu, berlangganan ke daftar filter yang sama seperti yang Anda miliki di sini.",
@@ -870,10 +862,6 @@
   "fixityourself":{
     "message":"OK, anda tetap bisa memblokir iklan ini untuk anda sendiri pada halaman pengaturan, Terima kasih!",
     "description":"Telling users who won't report an ad to us how to handle it for themselves"
-  },
-  "adblock_outdated_chrome":{
-    "message":"Anda menggunakan AdBlock versi lama. Silahkan kunjungi [[halaman ekstensi]], nyalakan 'Mode pengembang' dan klik 'Perbaharui ektensi sekarang'",
-    "description":"Ad report page instructions to update AdBlock in Chrome. The link will point to 'chrome:\/\/chrome\/extensions\/'"
   },
   "block_an_ad_on_this_page":{
     "message":"Blok sebuah iklan pada halaman ini",
@@ -1003,10 +991,6 @@
     "message":"Sembunyikan tombol ini",
     "description":"Toolbar button menu entry to hide the AdBlock button"
   },
-  "spread_the_word":{
-    "message":"Bantu Sebarkan!",
-    "description":"Text of a share link"
-  },
   "pwyw":{
     "message":"Membayar apa yang Anda inginkan!",
     "description":"Text of a payment request link"
@@ -1133,6 +1117,10 @@
     "message":"Tambahkan filter untuk bahasa lain: ",
     "description":"Dropdown list for language-specific filters"
   },
+  "how":{
+    "message":"Bagaimana?",
+    "description":"Text of a link pointing to instructions on how to do something"
+  },
   "whats_this":{
     "message":"Apa ini?",
     "description":"Text of a link pointing to the explanation of a new feature"
@@ -1140,6 +1128,18 @@
   "selectlanguage":{
     "message":" --Pilih bahasa-- ",
     "description":"Text for the first option in Langage Dropdown for Filter Lists tab in options. Include the ' -- ' on either side of your translation."
+  },
+  "allow_whitelisting_youtube_channels":{
+    "message":"Membolehkan akses kanal YouTube tertentu (memerlukan restart browser Anda)",
+    "description":"Checkbox on the 'General' tab of the Options page"
+  },
+  "whitelist_all_youtube_channels":{
+    "message":"Izinkan semua kanal langganan Youtube",
+    "description":"Toolbar button menu entry, displayed only on youtube.com\/feed\/subscriptions and if the YouTube channel whitelisting option is enabled"
+  },
+  "one_moment_all_youtube_channels":{
+    "message":"Harap tunggu sebentar kami sedang mengumpulkan semua langganan Anda",
+    "description":"Alert message displayed when whitelisting all subscribed YouTube channels"
   },
   "whitelist_youtube_channel":{
     "message":"Daftar putih saluran $name$",
@@ -1165,10 +1165,6 @@
       }
     }
   },
-  "latest_version":{
-    "message":"AdBlock sudah veri tebaru!",
-    "description":"On the Options > Support page, shows when there are no updates available for AdBlock"
-  },
   "here":{
     "message":"disini",
     "description":"This message is injected in other strings as a link\/button"
@@ -1176,18 +1172,6 @@
   "adblocksupport":{
     "message":"Dukungan AdBlock",
     "description":"Title of the support tab"
-  },
-  "checkforupdates":{
-    "message":"Memeriksa pembaruan (hanya memerlukan beberapa detik)...",
-    "description":"Displayed when AdBlock is checking the newest available version"
-  },
-  "somethingwentwrong":{
-    "message":"Terjadi kesalahan saat memeriksa pembaruan.",
-    "description":"Displayed when AdBlock is checking the newest available version and an error occurs"
-  },
-  "checkinternetconnection":{
-    "message":"Untuk melaporkan iklan, Anda harus terhubung ke internet.",
-    "description":"Displayed when AdBlock is checking the newest available version and an error occurs while reporting an ad on adreport page"
   },
   "whatsnew":{
     "message":"Apa baru dalam rilis terbaru? Lihat [[changelog]]!",
@@ -1218,7 +1202,7 @@
     "description":"Link to the source code of AdBlock on the Support tab of the options"
   },
   "debuginfo":{
-    "message":"Tim kami meminta beberapa informasi debug? Klik [[ di sini]] untuk itu!",
+    "message":"Tim kami meminta beberapa informasi debug? Klik [[di sini]] untuk itu!",
     "description":"Users can click this link to provide debug information to AdBlock staff"
   },
   "supportsite":{
