--- a/_locales/nb/messages.json
+++ b/_locales/nb/messages.json
@@ -243,6 +243,10 @@
     "message":"Aktiver kompatibilitetsmodus for ClickToFlash",
     "description":"Checkbox on the 'General' tab of the Options page. Allow AdBlock and the ClickToFlash Safari extension to work simultaneously on YouTube."
   },
+  "safaricontentblocking":{
+    "message":"Aktiver Safari innholdsblokkering",
+    "description":"Checkbox on the 'General' tab of the Options page. 'Content Blocking' is the name of a different way of blocking resources introduced in Safari 9."
+  },
   "debuginlogoption":{
     "message":"Vis feilsøkningsopplysninger i Konsoll (som vil gjøre AdBlock tregere)",
     "description":"Checkbox on the 'General' tab of the Options page"
@@ -472,7 +476,7 @@
     "description":"Button on the malware notification to disable future notifications. Message should be under 45 characters!"
   },
   "malwarewarning":{
-    "message":"Datamaskinen din kan være infisert av skadevare. Klikk[[her]] for mer informasjon.",
+    "message":"Datamaskinen din kan være infisert av skadevare. Klikk [[her]] for mer informasjon.",
     "description":"On the ad report page, the ads the user is seeing might be caused by malware\/adware"
   },
   "malwarenotfound":{
@@ -516,7 +520,7 @@
     "description":"Step 2 for disabling Chrome and Safari extensions"
   },
   "disableforsafaristepone":{
-    "message":"Klikk på Safari-menyen &rarr; Innstillinger &rarr; Utvidelser.",
+    "message":"Klikk på Safari-menyen > Innstillinger > Utvidelser.",
     "description":"Step 1 for disabling Safari extensions"
   },
   "pagelanguagecheck":{
@@ -691,14 +695,6 @@
     "message":"Annet",
     "description":"Multiple choice option"
   },
-  "orchrome":{
-    "message":"eller Chrome",
-    "description":"Used for placeholder in checkinfirefoxtitle and checkinfirefox_1 strings"
-  },
-  "oradblockforchrome":{
-    "message":"eller AdBlock for Chrome",
-    "description":"Used for placeholder in checkinfirefox_2 string"
-  },
   "retryaftersubscribe":{
     "message":"Abonner på denne filterlisten, og prøv igjen: $list_title$",
     "description":"Instructions on ad report page telling users to subscribe to a filter list and then check again to see whether the ad exists",
@@ -711,11 +707,11 @@
   },
   "checkinfirefoxtitle":{
     "message":"Sjekk i Firefox ",
-    "description":"Tell a user to see if a reported ad also appears in Firefox\/Chrome"
+    "description":"Tell a user to see if a reported ad also appears in Firefox"
   },
   "checkinfirefox_1":{
     "message":"Installer Firefox hvis du ikke har det.",
-    "description":"instruction for how to check Firefox\/Chrome for a reported ad"
+    "description":"instruction for how to check Firefox for a reported ad"
   },
   "checkinfirefox_3":{
     "message":"I den nettleseren, abonner på de samme filterlistene som her.",
@@ -770,10 +766,6 @@
   "fixityourself":{
     "message":"OK, du kan fremdeles blokkere denne reklamen selv, under innstillinger. Takk!",
     "description":"Telling users who won't report an ad to us how to handle it for themselves"
-  },
-  "adblock_outdated_chrome":{
-    "message":"Du bruker en gammel versjon av AdBlock. Vennligst gå til [[utvidelsessiden]], aktiver 'Utviklermodus' og klikk 'Oppdater utvidelser nå'",
-    "description":"Ad report page instructions to update AdBlock in Chrome. The link will point to 'chrome:\/\/chrome\/extensions\/'"
   },
   "block_an_ad_on_this_page":{
     "message":"Blokker en annonse på denne siden",
@@ -902,10 +894,6 @@
   "hide_this_button":{
     "message":"Skjul denne knappen",
     "description":"Toolbar button menu entry to hide the AdBlock button"
-  },
-  "spread_the_word":{
-    "message":"Hjelp oss å spre ordet!",
-    "description":"Text of a share link"
   },
   "pwyw":{
     "message":"Betal det du vil!",
@@ -1065,10 +1053,6 @@
       }
     }
   },
-  "latest_version":{
-    "message":"AdBlock er oppdatert!",
-    "description":"On the Options > Support page, shows when there are no updates available for AdBlock"
-  },
   "here":{
     "message":"her",
     "description":"This message is injected in other strings as a link\/button"
@@ -1077,20 +1061,8 @@
     "message":"AdBlock Støtte",
     "description":"Title of the support tab"
   },
-  "checkforupdates":{
-    "message":"Ser etter oppdateringer (dette bør kun ta et par sekunder)...",
-    "description":"Displayed when AdBlock is checking the newest available version"
-  },
-  "somethingwentwrong":{
-    "message":"Noe gikk galt under sjekkingen av oppdateringer.",
-    "description":"Displayed when AdBlock is checking the newest available version and an error occurs"
-  },
-  "checkinternetconnection":{
-    "message":"For å rapportere en annonse, må du være tilkoblet Internett.",
-    "description":"Displayed when AdBlock is checking the newest available version and an error occurs while reporting an ad on adreport page"
-  },
   "whatsnew":{
-    "message":"Hva er nytt i den siste versjonen? Se  [[oppdateringloggen]]!",
+    "message":"Hva er nytt i den siste versjonen? Se [[oppdateringloggen]]!",
     "description":"Link to display the changelog on the Support tab of the options"
   },
   "englishonly":{
@@ -1114,11 +1086,11 @@
     "description":"Subtitle on the Support tab of the options"
   },
   "sourcecode":{
-    "message":"Kildekoden er [[fritt tilgjengelig ]]!",
+    "message":"Kildekoden er [[fritt tilgjengelig]]!",
     "description":"Link to the source code of AdBlock on the Support tab of the options"
   },
   "debuginfo":{
-    "message":"Har vårt team etterspurt feilsøkingsinfo? Klikk [[her]]for det!",
+    "message":"Har vårt team etterspurt feilsøkingsinfo? Klikk [[her]] for det!",
     "description":"Users can click this link to provide debug information to AdBlock staff"
   },
   "supportsite":{
