--- a/_locales/pl/messages.json
+++ b/_locales/pl/messages.json
@@ -243,12 +243,12 @@
     "message":"Włącz tryb zgodności „ClickToFlash”",
     "description":"Checkbox on the 'General' tab of the Options page. Allow AdBlock and the ClickToFlash Safari extension to work simultaneously on YouTube."
   },
+  "safaricontentblocking":{
+    "message":"Włącz blokowanie zawartości Safari",
+    "description":"Checkbox on the 'General' tab of the Options page. 'Content Blocking' is the name of a different way of blocking resources introduced in Safari 9."
+  },
   "debuginlogoption":{
     "message":"Pokazuj komunikaty debugowania w logach konsoli (spowalnia to jednak AdBlock'a)",
-    "description":"Checkbox on the 'General' tab of the Options page"
-  },
-  "datacollectionoption":{
-    "message":"Zezwalaj AdBlockowi na zbieranie anonimowych danych list filtrów",
     "description":"Checkbox on the 'General' tab of the Options page"
   },
   "updatedrightnow":{
@@ -359,6 +359,10 @@
     "message":"Lista filtrów antyspołecznych (usuwa przyciski sieci społecznościowych)",
     "description":"A filter list"
   },
+  "filterwarning_removal":{
+    "message":"Lista usuwania ostrzeżenia o AdBlocku (usuwa wiadomości o korzystaniu z AdBlocka)",
+    "description":"A filter list. \"Adblock\" is written with a lowercase B in this string as it refers to ad blocking extensions in general, not just AdBlock specifically."
+  },
   "filterrussian":{
     "message":"Rosyjski",
     "description":"Language names for a filter list"
@@ -451,6 +455,10 @@
     "message":"Uwaga: jeśli popełnisz błąd, może on zablokować inne filtry, także te oficjalne!\nPrzeczytaj [[poradnik tworzenia składni filtrów]] aby nauczyć się jak dodawać zaawansowane wpisy do czarnej i białej listy filtrów..",
     "description":"Warning when blacklisting manually"
   },
+  "contentblockingwarning":{
+    "message":"Uwaga: Dodawanie stron do białej listy (dopuszczanie reklam) nie jest wspierane przy włączonej funkcji Blokowanie Treści w Safari.",
+    "description":"Notice shown on the 'Customize' tab of the options page when Safari Content Blocking is enabled"
+  },
   "savebutton":{
     "message":"Zapisz",
     "description":"Save button"
@@ -492,12 +500,16 @@
     "description":"Section header on the ad report page"
   },
   "malwarewarning":{
-    "message":"Twój komputer może być zainfekowany przez złośliwe oprogramowanie.  Kliknij [[tutaj]] aby uzyskać więcej informacji.",
+    "message":"Twój komputer może być zainfekowany przez złośliwe oprogramowanie. Kliknij [[tutaj]] aby uzyskać więcej informacji.",
     "description":"On the ad report page, the ads the user is seeing might be caused by malware\/adware"
   },
   "malwarenotfound":{
     "message":"Nie znaleziono znanego złośliwego oprogramowania.",
     "description":"On the ad report page, the ads the user is seeing are probably not caused by malware\/adware"
+  },
+  "disableaa":{
+    "message":"Sprawdź filtry Akceptowanych Reklam:",
+    "description":"Section header on the ad report page"
   },
   "clickdisableaa":{
     "message":"Kliknij tutaj: [[Wyłącz Akceptowane Reklamy]]",
@@ -568,7 +580,7 @@
     "description":"Step 2 for disabling Chrome and Safari extensions"
   },
   "disableforsafaristepone":{
-    "message":"Kliknij w menu Safari &rarr; Ustawienia &rarr; Rozszerzenia.",
+    "message":"Kliknij w menu Safari > Ustawienia > Rozszerzenia.",
     "description":"Step 1 for disabling Safari extensions"
   },
   "reenableadsonebyone":{
@@ -783,14 +795,6 @@
     "message":"Innym",
     "description":"Multiple choice option"
   },
-  "orchrome":{
-    "message":"lub Chrome'a",
-    "description":"Used for placeholder in checkinfirefoxtitle and checkinfirefox_1 strings"
-  },
-  "oradblockforchrome":{
-    "message":"lub AdBlock'a dla Chrome'a",
-    "description":"Used for placeholder in checkinfirefox_2 string"
-  },
   "retryaftersubscribe":{
     "message":"Subskrybuj tę listę filtrów i spróbuj ponownie: $list_title$",
     "description":"Instructions on ad report page telling users to subscribe to a filter list and then check again to see whether the ad exists",
@@ -803,15 +807,15 @@
   },
   "checkinfirefoxtitle":{
     "message":"Sprawdź w Firefoksie ",
-    "description":"Tell a user to see if a reported ad also appears in Firefox\/Chrome"
+    "description":"Tell a user to see if a reported ad also appears in Firefox"
   },
   "checkinfirefox_1":{
     "message":"Zainstaluj Firefoksa jeśli go nie masz.",
-    "description":"instruction for how to check Firefox\/Chrome for a reported ad"
+    "description":"instruction for how to check Firefox for a reported ad"
   },
   "checkinfirefox_2":{
     "message":"Zainstaluj Adblock Plus dla Firefoxa, jeśli go nie posiadasz.",
-    "description":"Instruction for how to check Firefox\/Chrome for a reported ad. Don't translate the name 'Adblock Plus'."
+    "description":"Instruction for how to check Firefox for a reported ad. Don't translate the name 'Adblock Plus'."
   },
   "checkinfirefox_3":{
     "message":"Zapisz w tej przeglądarce tę samą listę filtrów, którą masz tutaj.",
@@ -866,10 +870,6 @@
   "fixityourself":{
     "message":"OK, możesz zablokować reklamę tylko dla siebie na stronie opcji. Dzięki!",
     "description":"Telling users who won't report an ad to us how to handle it for themselves"
-  },
-  "adblock_outdated_chrome":{
-    "message":"Używasz starej wersji AdBlock'a. Przejdź na [[stronę rozszerzeń]], włącz \"Tryb programisty\" i kliknij \"Aktualizuj rozszerzenia\"",
-    "description":"Ad report page instructions to update AdBlock in Chrome. The link will point to 'chrome:\/\/chrome\/extensions\/'"
   },
   "block_an_ad_on_this_page":{
     "message":"Zablokuj reklamę na tej stronie",
@@ -983,6 +983,26 @@
     "message":"Wstrzymaj AdBlock'a",
     "description":"Menu entry to pause AdBlock"
   },
+  "safaricontentblockingpausemessage":{
+    "message":"Aby wstrzymać AdBlocka z włączoną funkcją Blokowania Reklam, wybierz Safari (na pasku menu) > Preferencje > Rozszerzenia > AdBlock, i odznacz \"Włącz AdBlock\".",
+    "description":"Alert displayed after clicking 'Pause AdBlock' in the AdBlock menu while Safari Content blocking is enabled"
+  },
+  "safaricontentblockinglimitexceeded":{
+    "message":"Liczba list filtrów przekraczała limit 50 tysięcy, więc została automatycznie zredukowana. Prosimy zrezygnować z niektórych list filtrów lub wyłączyć Blokowanie Treści w Safari!",
+    "description":"Displayed when the number of rules in the subscribed filter lists is larger than the number supported by Safari Content Blocking, if that option is enabled"
+  },
+  "browserestartrequired":{
+    "message":"Prosimy uruchomić ponownie Safari, by zakończyć proces wyłączania blokowania treści.",
+    "description":"Displayed after disabling Safari Content Blocking, which requres a browser relaunch"
+  },
+  "safarinotificationtitle":{
+    "message":"Przekroczono limit Blokowania Treści",
+    "description":"Title of a notification shown to Safari Content Blocking users with too many filter list rules"
+  },
+  "safarinotificationbody":{
+    "message":"Prosimy wyłączyć niektóre listy filtrów. Więcej informacji w Opcjach AdBlocka.",
+    "description":"Body of a notification shown to Safari Content Blocking users with too many filter list rules"
+  },
   "undo_last_block":{
     "message":"Cofnij moje blokady na tej domenie",
     "description":"Menu entry to let the user cancel the result of running the blacklist wizard"
@@ -998,10 +1018,6 @@
   "hide_this_button":{
     "message":"Ukryj ten przycisk",
     "description":"Toolbar button menu entry to hide the AdBlock button"
-  },
-  "spread_the_word":{
-    "message":"Pomóż w rozpowszechnianiu!",
-    "description":"Text of a share link"
   },
   "pwyw":{
     "message":"Zapłać ile zechcesz!",
@@ -1129,6 +1145,10 @@
     "message":"Dodaj filtry dla innego języka: ",
     "description":"Dropdown list for language-specific filters"
   },
+  "how":{
+    "message":"Jak?",
+    "description":"Text of a link pointing to instructions on how to do something"
+  },
   "whats_this":{
     "message":"Co to jest?",
     "description":"Text of a link pointing to the explanation of a new feature"
@@ -1161,10 +1181,6 @@
       }
     }
   },
-  "latest_version":{
-    "message":"AdBlock jest aktualny!",
-    "description":"On the Options > Support page, shows when there are no updates available for AdBlock"
-  },
   "here":{
     "message":"tutaj",
     "description":"This message is injected in other strings as a link\/button"
@@ -1172,18 +1188,6 @@
   "adblocksupport":{
     "message":"Wsparcie dla AdBlock'a",
     "description":"Title of the support tab"
-  },
-  "checkforupdates":{
-    "message":"Wyszukiwanie aktualizacji (powinno to potrwać kilka sekund)...",
-    "description":"Displayed when AdBlock is checking the newest available version"
-  },
-  "somethingwentwrong":{
-    "message":"Coś poszło nie tak podczas sprawdzania aktualizacji.",
-    "description":"Displayed when AdBlock is checking the newest available version and an error occurs"
-  },
-  "checkinternetconnection":{
-    "message":"Aby zgłosić reklamę, musisz być podłączony do internetu.",
-    "description":"Displayed when AdBlock is checking the newest available version and an error occurs while reporting an ad on adreport page"
   },
   "whatsnew":{
     "message":"Co nowego jest w najnowszej wersji? Zobacz [[listę zmian]]!",
@@ -1225,9 +1229,53 @@
     "message":"Jeśli widzisz reklamę, nie twórz zgłoszenia błędu, stwórz [[zgłoszenie reklamy]]!",
     "description":"Link to the ad report page on our support site. This is found on the Support tab of the options."
   },
+  "resourceblocktitle":{
+    "message":"Wszystykie źródła",
+    "description":"Resource list page name"
+  },
+  "headerresource":{
+    "message":"Źródło",
+    "description":"Resource list page: title of a column"
+  },
   "headertype":{
     "message":"Typ",
     "description":"Resource list page: title of a column"
+  },
+  "headerfilter":{
+    "message":"Dobrany filtr",
+    "description":"Resource list page: title of a column"
+  },
+  "show_resourcelist":{
+    "message":"Pokaż wszystkie źródła",
+    "description":"Menu entry to open the resource list page"
+  },
+  "noresourcessend2":{
+    "message":"Coś poszło nie tak. Żadne zasoby nie zostały wysłane. Ta strona zostanie zamknięta. Spróbuj załadować stronę ponownie.",
+    "description":"Resource list page: error message"
+  },
+  "resourcedomain":{
+    "message":"Załadowano na stronie z domeny:\n$domain$",
+    "description":"Resource list page: text shown when hovering over an item in the third-party column",
+    "placeholders":{
+      "domain":{
+        "content":"$1",
+        "example":"example.com"
+      }
+    }
+  },
+  "filterorigin":{
+    "message":"Źródło filtra:\n$list$",
+    "description":"Resource list page: tooltip of matching filter, telling which filter list contains the filter",
+    "placeholders":{
+      "list":{
+        "content":"$1",
+        "example":"A filter list name OR AdBlock OR the translation of 'tabcustomize'"
+      }
+    }
+  },
+  "typeselector":{
+    "message":"selektor",
+    "description":"A resource type"
   },
   "typesub_frame":{
     "message":"ramka",
@@ -1237,8 +1285,116 @@
     "message":"strona",
     "description":"A resource type"
   },
+  "topframe":{
+    "message":"Strona pierwszorzędna",
+    "description":"Resource list page: frame type"
+  },
+  "subframe":{
+    "message":"Strona drugorzędna",
+    "description":"Resource list page: frame type"
+  },
+  "frametype":{
+    "message":"Rodzaj zawartości: ",
+    "description":"Resource list page: followed by frame type (e.g. top frame, subframe)"
+  },
+  "framedomain":{
+    "message":"Domena zawartości: ",
+    "description":"Resource list page: domain name of the frame"
+  },
+  "frameurl":{
+    "message":"Link zawartości: ",
+    "description":"Resource list page: full URL of the frame"
+  },
+  "legend":{
+    "message":"Legenda: ",
+    "description":"Resource list page: followed by color codes for various resource statuses (e.g. blocked, whitelisted, hidden)"
+  },
+  "blockedresource":{
+    "message":"Zablokowane źródło",
+    "description":"Resource list page: resource status"
+  },
+  "whitelistedresource":{
+    "message":"Dopuszczane źródło",
+    "description":"Resource list page: resource status"
+  },
+  "hiddenelement":{
+    "message":"Ukryty element",
+    "description":"Resource list page: resource status"
+  },
+  "thirdparty":{
+    "message":"Strona zewnętrzna",
+    "description":"Resource list page: column title telling if the resource originates from a different domain"
+  },
+  "acceptableadsdisable_done":{
+    "message":"Zostałeś wypisany z listy filtrów Akceptowanych Reklam.",
+    "description":"Message shown to users after disabling Acceptable Ads via update page."
+  },
+  "acceptableadsdisable_how_to_reenable":{
+    "message":"Możesz to ponownie włączyć i wspierać strony internetowe, które lubisz poprzez wybranie \"Dopuść nienachalne reklamy\" poniżej.",
+    "description":"Message shown to users after disabling Acceptable Ads via update page."
+  },
+  "adreport_laststep":{
+    "message":"Ostatni krok: zgłoś nam problem.",
+    "description":"Heading on the ad report page. Shown when the ad needs to be reported to AdBlock, and not filter list maintainers."
+  },
+  "adreport_name":{
+    "message":"Jak masz na imię?",
+    "description":"Label for a textbox where the user enters their name (or nickname) to submit a bug or ad report."
+  },
+  "adreport_email":{
+    "message":"Jaki jest Twój adres email?",
+    "description":"Label for a textbox where the user enters their email address to submit a bug or ad report."
+  },
+  "adreport_email_privacy":{
+    "message":"Użyjemy go tylko, by skontaktować się z Tobą, jeśli będziemy potrzebować więcej informacji.",
+    "description":"Let the user know that their email address won't be used for reasons other than contacting them about their bug or ad report."
+  },
+  "adreport_location":{
+    "message":"Gdzie dokładnie znajduje się reklama na tej stronie? Jak wygląda?",
+    "description":"Question on the ad report page asking the user to describe the ad and its location on a webpage."
+  },
+  "adreport_screen_cap_upload":{
+    "message":"Dołącz zrzut ekranu:",
+    "description":"Label next to a file upload button."
+  },
+  "adreport_filter":{
+    "message":"Jeśli udało Ci się stworzyć działający filtr używając kreatora \"zablokuj reklamę\", wklej go poniżej:",
+    "description":"Optional question on the ad report page when the ad needs to be reported to AdBlock."
+  },
   "buttonsubmit":{
     "message":"Potwierdź",
     "description":"Button to send a form."
+  },
+  "adreport_missing_info":{
+    "message":"Brak wymaganych informacji, lub są one błędne. Prosimy wypełnić pola zaznaczone na czerwono.",
+    "description":"Error message shown when the user doesn't enter anything in some of the text fields."
+  },
+  "adreport_missing_screenshot":{
+    "message":"Zapomniałeś dołączyć zrzut ekranu! Nie możemy Ci pomóc bez zobaczenia reklamy, którą zgłaszasz.",
+    "description":"Error message shown when the user doesn't attach a screenshot to an ad report."
+  },
+  "adreport_response_invalid_file":{
+    "message":"To nie jest plik obrazu. Prosimy przesłać plik .png, .gif lub .jpg.",
+    "description":"Error message shown when the user uploads an invalid file type."
+  },
+  "adreport_response_large_file":{
+    "message":"Ten plik jest zbyt duży. Prosimy upewnić się, że plik jest mniejszy niż 10 MB.",
+    "description":"Error message shown when the user tries to upload a large image file."
+  },
+  "adreport_response_save_error":{
+    "message":"Wystąpił błąd podczas zapisywania pliku.",
+    "description":"Error message shown when the server could not save an attached file."
+  },
+  "adreport_response_file_name":{
+    "message":"Ta nazwa pliku jest zbyt długa. Prosimy nadać mu krótszą nazwę.",
+    "description":"Error message shown when the file name of an attachement the user is trying to submit in a report is longer than 255 characters."
+  },
+  "adreport_all_debug_info":{
+    "message":"Poniższe informacje będą także widoczne w zgłoszeniu reklamy.",
+    "description":"Shows the user the debug information that will be sent along with their report."
+  },
+  "adreport_server_response_error_msg":{
+    "message":"Wystąpił błąd podczas przetwarzania zgłoszenia.",
+    "description":"Error message shown when an new ticket is sumbitted for an ad or bug report, and the server had an issue while processing the data."
   }
 }
