--- a/_locales/ro/messages.json
+++ b/_locales/ro/messages.json
@@ -7,6 +7,10 @@
     "message":"Cea mai populară extensie pentru Chrome, cu peste 40 de milioane de utilizatori! Blochează orice reclamă pe web.",
     "description":"Extension description in manifest. Should not exceed 132 characters."
   },
+  "description_edge":{
+    "message":"AdBlock. Nr.1 în blocarea reclamelor cu peste 200 de milioane de descărcări. Blochează toate reclamele în tot internetul.",
+    "description":"Extension description in manifest. Should not exceed 132 characters."
+  },
   "adblock_click_for_details":{
     "message":"AdBlock - click pentru detalii",
     "description":"Tooltip on the AdBlock button, to help users understand that they can click the button, and that they can control the number badge that appears on the button."
@@ -34,6 +38,10 @@
   "optionstitle":{
     "message":"Opțiuni AdBlock",
     "description":"Title for the options page"
+  },
+  "chromebutton_how_to_hide2":{
+    "message":"Faceţi clic dreapta pe butonul AdBlock şi selectaţi \"Ascunde-l din meniul Chrome\". Pentru al afișa: faceţi clic pe meniul Chrome apoi faceţi clic dreapta pe butonul AdBlock, şi selectaţi \"Păstrează-l în bara de instrumente\".",
+    "description":"Message explaining how to hide the AdBlock toolbar button. 'Hide Button' should match the text that Chrome displays when you right click a toolbar button."
   },
   "operabutton_how_to_hide2":{
     "message":"Pentru a ascunde butonul, du-te la opera:\/\/extensions şi bifează opţiunea  'Hide from toolbar'. Poate fi afișat din nou prin debifarea acestei opţiuni.",
@@ -243,12 +251,12 @@
     "message":"Activați modul de compatibilitate ClickToFlash",
     "description":"Checkbox on the 'General' tab of the Options page. Allow AdBlock and the ClickToFlash Safari extension to work simultaneously on YouTube."
   },
+  "safaricontentblocking":{
+    "message":"Permite blocarea conţinutului Safari",
+    "description":"Checkbox on the 'General' tab of the Options page. 'Content Blocking' is the name of a different way of blocking resources introduced in Safari 9."
+  },
   "debuginlogoption":{
     "message":"Arată declarații de depanare în Consolă (încetinește AdBlock)",
-    "description":"Checkbox on the 'General' tab of the Options page"
-  },
-  "datacollectionoption":{
-    "message":"Permite AdBlock să colecteze anonim lista de utilizare a filtrului şi datele",
     "description":"Checkbox on the 'General' tab of the Options page"
   },
   "updatedrightnow":{
@@ -315,6 +323,18 @@
     "message":"Preluare... vă rugăm așteptați.",
     "description":"Status label"
   },
+  "ab_filters_subscription_lastDownload_invalidURL":{
+    "message":"Greșit, nu este o adresă validă",
+    "description":"message on the filter tab - Message when you subscribe to a non-list URL"
+  },
+  "ab_filters_subscription_lastDownload_connectionError":{
+    "message":"Eroare, descărcare nereuşită",
+    "description":"message on the filter tab - Generic filter list download error message"
+  },
+  "ab_filters_subscription_lastDownload_invalidData":{
+    "message":"Greșit, nu este o listă de filtre validă",
+    "description":"message on the filter tab - Invalid filter list file"
+  },
   "invalidListUrl":{
     "message":"Link invalid. Va fi șters.",
     "description":"Message when you subscribe to a non-list URL"
@@ -359,13 +379,33 @@
     "message":"Filtru rețele sociale (elimină butoanele sociale)",
     "description":"A filter list"
   },
+  "filteracceptable_ads":{
+    "message":"Reclame acceptabile",
+    "description":"A filter list"
+  },
+  "filteradblock_custom":{
+    "message":"AdBlock Filtre personalizate",
+    "description":"A filter list"
+  },
+  "filtereasylist":{
+    "message":"EasyList",
+    "description":"A filter list"
+  },
   "filterrussian":{
     "message":"Rusă și ucraineană",
     "description":"Language names for a filter list"
   },
+  "filter_russian":{
+    "message":"EasyList Rusă și ucraineană",
+    "description":"A filter list combined with EasyList"
+  },
   "filterczech":{
     "message":"Cehă și Slovacă",
     "description":"A filter list"
+  },
+  "filter_czech":{
+    "message":"EasyList Cehă și Slovacă",
+    "description":"A filter list combined with EasyList"
   },
   "filtereasyprivacy":{
     "message":"EasyPrivacy (protecție a vieții private)",
@@ -375,6 +415,10 @@
     "message":"Indoneziană",
     "description":"A filter list"
   },
+  "filter_easylist_plus_indonesian":{
+    "message":"EasyList Indoneziană",
+    "description":"A filter list combined with EasyList"
+  },
   "filtermalware":{
     "message":"Protecție malware",
     "description":"A filter list"
@@ -382,6 +426,10 @@
   "filterlatvian":{
     "message":"Letonă",
     "description":"A filter list"
+  },
+  "filter_latvian":{
+    "message":"EasyList Letonă",
+    "description":"A filter list combined with EasyList"
   },
   "filterswedish":{
     "message":"Suedeză",
@@ -451,6 +499,14 @@
     "message":"Ai girjă: dacă greșești aici, toate filtrele, inclusiv cele oficiale, pot funcționa greșit! \n\nCitește [[sintaxa filtrelor]] pentru a învăța cum să adaugi filtre avansate.",
     "description":"Warning when blacklisting manually"
   },
+  "migration_error_message":{
+    "message":"Am găsit unele erori în Filtrele dumneavoastră personalizate. Vezi mesajele de mai jos.",
+    "description":"Warning when adding custom filters manually"
+  },
+  "delete_migration_error_messages":{
+    "message":"Ștergere mesaje",
+    "description":"Button to delete error messages when adding custom filters manually"
+  },
   "savebutton":{
     "message":"Salvează",
     "description":"Save button"
@@ -480,7 +536,7 @@
     "description":"Button on the malware notification to disable future notifications. Message should be under 45 characters!"
   },
   "malwarewarning":{
-    "message":"Computerul poate fi infectat cu malware.  Faceţi clic [[aici]] pentru mai multe informaţii.",
+    "message":"Computerul poate fi infectat cu malware. Faceţi clic [[aici]] pentru mai multe informaţii.",
     "description":"On the ad report page, the ads the user is seeing might be caused by malware\/adware"
   },
   "malwarenotfound":{
@@ -524,7 +580,7 @@
     "description":"Step 2 for disabling Chrome and Safari extensions"
   },
   "disableforsafaristepone":{
-    "message":"Click pe meniul Safari &rarr; Preferințe &rarr; Extensii.",
+    "message":"Click pe meniul Safari > Preferințe > Extensii.",
     "description":"Step 1 for disabling Safari extensions"
   },
   "pagelanguagecheck":{
@@ -699,14 +755,6 @@
     "message":"Alte",
     "description":"Multiple choice option"
   },
-  "orchrome":{
-    "message":"sau Chrome",
-    "description":"Used for placeholder in checkinfirefoxtitle and checkinfirefox_1 strings"
-  },
-  "oradblockforchrome":{
-    "message":"sau AdBlock pentru Chrome",
-    "description":"Used for placeholder in checkinfirefox_2 string"
-  },
   "retryaftersubscribe":{
     "message":"Adaugă acest filtru, iar apoi încearcă din nou: $list_title$",
     "description":"Instructions on ad report page telling users to subscribe to a filter list and then check again to see whether the ad exists",
@@ -718,12 +766,12 @@
     }
   },
   "checkinfirefoxtitle":{
-    "message":"Verifica în Firefox ",
-    "description":"Tell a user to see if a reported ad also appears in Firefox\/Chrome"
+    "message":"Verifica în Firefox",
+    "description":"Tell a user to see if a reported ad also appears in Firefox"
   },
   "checkinfirefox_1":{
     "message":"Instalează Firefox dacă nu le ai.",
-    "description":"instruction for how to check Firefox\/Chrome for a reported ad"
+    "description":"instruction for how to check Firefox for a reported ad"
   },
   "checkinfirefox_3":{
     "message":"În acel browser, subscrie la aceleași liste de filtrare cum ai aici.",
@@ -778,10 +826,6 @@
   "fixityourself":{
     "message":"Poți bloca această reclamă pentru tine în Opțiuni. Mulțumesc!",
     "description":"Telling users who won't report an ad to us how to handle it for themselves"
-  },
-  "adblock_outdated_chrome":{
-    "message":"Folosești o versiune veche AdBlock. Vă rugăm să accesați [[managerul de extensii]], să activați 'Mod dezvoltator' și să faceți click pe 'Actualizați extensiile imediat'.",
-    "description":"Ad report page instructions to update AdBlock in Chrome. The link will point to 'chrome:\/\/chrome\/extensions\/'"
   },
   "block_an_ad_on_this_page":{
     "message":"Blocheză o reclamă de pe această pagină",
@@ -910,10 +954,6 @@
   "hide_this_button":{
     "message":"Ascunde acest buton",
     "description":"Toolbar button menu entry to hide the AdBlock button"
-  },
-  "spread_the_word":{
-    "message":"Ajuta la răspândire!",
-    "description":"Text of a share link"
   },
   "pwyw":{
     "message":"Plătiţi ceea ce doriţi!",
@@ -1069,10 +1109,6 @@
       }
     }
   },
-  "latest_version":{
-    "message":"AdBlock este actualizat!",
-    "description":"On the Options > Support page, shows when there are no updates available for AdBlock"
-  },
   "here":{
     "message":"aici",
     "description":"This message is injected in other strings as a link\/button"
@@ -1081,20 +1117,8 @@
     "message":"Suport AdBlock",
     "description":"Title of the support tab"
   },
-  "checkforupdates":{
-    "message":"Verificare actualizări (ar trebui să ia doar câteva secunde)...",
-    "description":"Displayed when AdBlock is checking the newest available version"
-  },
-  "somethingwentwrong":{
-    "message":"Ceva a mers prost în timp ce se verificau actualizările.",
-    "description":"Displayed when AdBlock is checking the newest available version and an error occurs"
-  },
-  "checkinternetconnection":{
-    "message":"Pentru a raporta o reclamă, trebuie să fiţi conectat la internet.",
-    "description":"Displayed when AdBlock is checking the newest available version and an error occurs while reporting an ad on adreport page"
-  },
   "whatsnew":{
-    "message":"Ce este nou în ultima versiune? Vezi [[ changelog]]!",
+    "message":"Ce este nou în ultima versiune? Vezi [[changelog]]!",
     "description":"Link to display the changelog on the Support tab of the options"
   },
   "englishonly":{
@@ -1122,7 +1146,7 @@
     "description":"Link to the source code of AdBlock on the Support tab of the options"
   },
   "debuginfo":{
-    "message":"Echipa noastră a solicitat unele informaţii de depanare? Faceţi clic [[ aici]] pentru asta!",
+    "message":"Echipa noastră a solicitat unele informaţii de depanare? Faceţi clic [[aici]] pentru asta!",
     "description":"Users can click this link to provide debug information to AdBlock staff"
   },
   "supportsite":{
