--- a/_locales/sk/messages.json
+++ b/_locales/sk/messages.json
@@ -247,10 +247,6 @@
     "message":"Zobrazovať chybové hlásenia v konzole (spomaluje AdBlock)",
     "description":"Checkbox on the 'General' tab of the Options page"
   },
-  "datacollectionoption":{
-    "message":"Povoliť AdBlock zbierať anonymné údaje o používaní filtrov",
-    "description":"Checkbox on the 'General' tab of the Options page"
-  },
   "updatedrightnow":{
     "message":"aktualizované práve teraz",
     "description":"Label for subscription"
@@ -480,7 +476,7 @@
     "description":"Button on the malware notification to disable future notifications. Message should be under 45 characters!"
   },
   "malwarewarning":{
-    "message":"Váš počítač môže byť napadnutý malwarom.  Kliknite [[tu]] pre viac informácií.",
+    "message":"Váš počítač môže byť napadnutý malwarom. Kliknite [[tu]] pre viac informácií.",
     "description":"On the ad report page, the ads the user is seeing might be caused by malware\/adware"
   },
   "malwarenotfound":{
@@ -520,7 +516,7 @@
     "description":"On the ad report page, alert notifying users that they will need to manually reenable the extensions"
   },
   "disableforchromeandsafaristeptwo":{
-    "message":"Odčiarknite všetky 'Povolené' políčka okrem AdBlocku.  Nechajte AdBlock zapnutý.",
+    "message":"Odčiarknite všetky 'Povolené' políčka okrem AdBlocku. Nechajte AdBlock zapnutý.",
     "description":"Step 2 for disabling Chrome and Safari extensions"
   },
   "disableforsafaristepone":{
@@ -699,14 +695,6 @@
     "message":"Iný",
     "description":"Multiple choice option"
   },
-  "orchrome":{
-    "message":"alebo Chrome",
-    "description":"Used for placeholder in checkinfirefoxtitle and checkinfirefox_1 strings"
-  },
-  "oradblockforchrome":{
-    "message":"alebo AdBlock pre Chrome",
-    "description":"Used for placeholder in checkinfirefox_2 string"
-  },
   "retryaftersubscribe":{
     "message":"Prihláste sa k odberu tohoto zoznamu filtrov a skúste to znovu: $list_title$",
     "description":"Instructions on ad report page telling users to subscribe to a filter list and then check again to see whether the ad exists",
@@ -718,12 +706,12 @@
     }
   },
   "checkinfirefoxtitle":{
-    "message":"Skontrolujte vo Firefoxe ",
-    "description":"Tell a user to see if a reported ad also appears in Firefox\/Chrome"
+    "message":"Skontrolujte vo Firefoxe",
+    "description":"Tell a user to see if a reported ad also appears in Firefox"
   },
   "checkinfirefox_1":{
     "message":"Nainštalujte FireFox ak ho nemáte.",
-    "description":"instruction for how to check Firefox\/Chrome for a reported ad"
+    "description":"instruction for how to check Firefox for a reported ad"
   },
   "checkinfirefox_3":{
     "message":"Skontrolujte či máte ten istý zoznam filtrov v prehliadači ako aj tu.",
@@ -779,10 +767,6 @@
     "message":"OK, môžete si zablokovať túto reklamu len pre seba v nastaveniach. Ďakujem!",
     "description":"Telling users who won't report an ad to us how to handle it for themselves"
   },
-  "adblock_outdated_chrome":{
-    "message":"Používate starú verziu AdBlocku. Prosím choďte na [[stránku s rozšíreniami]], zapnite 'Režim pre vývojárov' a kliknite na 'Aktualizovať rozšírenia'.",
-    "description":"Ad report page instructions to update AdBlock in Chrome. The link will point to 'chrome:\/\/chrome\/extensions\/'"
-  },
   "block_an_ad_on_this_page":{
     "message":"Blokovať reklamu na tejto stránke",
     "description":"Toolbar button menu entry and context menu entry"
@@ -809,10 +793,6 @@
   },
   "typeobject":{
     "message":"interaktívny objekt",
-    "description":"A resource type"
-  },
-  "typesubdocument":{
-    "message":"sub-dokument",
     "description":"A resource type"
   },
   "typeobject_subrequest":{
@@ -910,10 +890,6 @@
   "hide_this_button":{
     "message":"Skryť toto tlačidlo",
     "description":"Toolbar button menu entry to hide the AdBlock button"
-  },
-  "spread_the_word":{
-    "message":"Zdieľajte nás!",
-    "description":"Text of a share link"
   },
   "pwyw":{
     "message":"Zaplaťte, koľko chcete!",
@@ -1069,10 +1045,6 @@
       }
     }
   },
-  "latest_version":{
-    "message":"AdBlock je aktuálny!",
-    "description":"On the Options > Support page, shows when there are no updates available for AdBlock"
-  },
   "here":{
     "message":"tu",
     "description":"This message is injected in other strings as a link\/button"
@@ -1081,20 +1053,8 @@
     "message":"Podpora",
     "description":"Title of the support tab"
   },
-  "checkforupdates":{
-    "message":"Kontrola aktualizácií (mala by trvať iba pár sekúnd)...",
-    "description":"Displayed when AdBlock is checking the newest available version"
-  },
-  "somethingwentwrong":{
-    "message":"Niečo sa pokazilo pri kontrole aktualizácií.",
-    "description":"Displayed when AdBlock is checking the newest available version and an error occurs"
-  },
-  "checkinternetconnection":{
-    "message":"Ak chcete nahlásiť reklamu, musíte byť pripojený na internet.",
-    "description":"Displayed when AdBlock is checking the newest available version and an error occurs while reporting an ad on adreport page"
-  },
   "whatsnew":{
-    "message":"Čo je nové v najnovšej verzii? Pozri [[ zoznam zmien]]!",
+    "message":"Čo je nové v najnovšej verzii? Pozri [[zoznam zmien]]!",
     "description":"Link to display the changelog on the Support tab of the options"
   },
   "englishonly":{
@@ -1136,10 +1096,6 @@
   "headertype":{
     "message":"Typ",
     "description":"Resource list page: title of a column"
-  },
-  "typesub_frame":{
-    "message":"sub-dokument",
-    "description":"A resource type"
   },
   "typemain_frame":{
     "message":"stránka",
