--- a/_locales/sr/messages.json
+++ b/_locales/sr/messages.json
@@ -243,12 +243,12 @@
     "message":"Omogući režim kompatibilnosti ClickToFlash",
     "description":"Checkbox on the 'General' tab of the Options page. Allow AdBlock and the ClickToFlash Safari extension to work simultaneously on YouTube."
   },
+  "safaricontentblocking":{
+    "message":"Omogućite Safari blokiranje sadržaja",
+    "description":"Checkbox on the 'General' tab of the Options page. 'Content Blocking' is the name of a different way of blocking resources introduced in Safari 9."
+  },
   "debuginlogoption":{
     "message":"Prikaži izjave uklanjanja greške u zapisu konzole (usporava AdBlock)",
-    "description":"Checkbox on the 'General' tab of the Options page"
-  },
-  "datacollectionoption":{
-    "message":"Dopusti AdBlock-u anonimno prikupljanje podatka i korišćenja liste filtera",
     "description":"Checkbox on the 'General' tab of the Options page"
   },
   "updatedrightnow":{
@@ -451,6 +451,10 @@
     "message":"Budite pažljivi: ukoliko napravite grešku ovde mnogo drugih filtera, uključujući i oficijalne filtere, mogu da prestanu da rade kako treba!\nPročitajte [[sintaksni vodič za filtere]] kako bi naučili da dodajete napredne filtere zabranjujućih i dopuštajućih lista.",
     "description":"Warning when blacklisting manually"
   },
+  "contentblockingwarning":{
+    "message":"Napomena: Dodavanje na listu dopuštenih reklama na stranici nije podržano sa Safari blokiranjem sadržaja.",
+    "description":"Notice shown on the 'Customize' tab of the options page when Safari Content Blocking is enabled"
+  },
   "savebutton":{
     "message":"Zapamti",
     "description":"Save button"
@@ -572,7 +576,7 @@
     "description":"Step 2 for disabling Chrome and Safari extensions"
   },
   "disableforsafaristepone":{
-    "message":"Kliknite na Safari meni &rarr; Podešavanja &rarr; Extenzije.",
+    "message":"Kliknite na Safari meni > Podešavanja > Extenzije.",
     "description":"Step 1 for disabling Safari extensions"
   },
   "reenableadsonebyone":{
@@ -787,14 +791,6 @@
     "message":"Ostalo",
     "description":"Multiple choice option"
   },
-  "orchrome":{
-    "message":"ili Chrome",
-    "description":"Used for placeholder in checkinfirefoxtitle and checkinfirefox_1 strings"
-  },
-  "oradblockforchrome":{
-    "message":"ili AdBlock za Chrome",
-    "description":"Used for placeholder in checkinfirefox_2 string"
-  },
   "retryaftersubscribe":{
     "message":"Prijavite se na ovu listu filtera, onda pokušajte ponovo: $list_title$",
     "description":"Instructions on ad report page telling users to subscribe to a filter list and then check again to see whether the ad exists",
@@ -806,16 +802,16 @@
     }
   },
   "checkinfirefoxtitle":{
-    "message":"Proveri u Firefox-u ",
-    "description":"Tell a user to see if a reported ad also appears in Firefox\/Chrome"
+    "message":"Proveri u Firefox-u",
+    "description":"Tell a user to see if a reported ad also appears in Firefox"
   },
   "checkinfirefox_1":{
     "message":"Instalirajte Firefox ukoliko ga nemate.",
-    "description":"instruction for how to check Firefox\/Chrome for a reported ad"
+    "description":"instruction for how to check Firefox for a reported ad"
   },
   "checkinfirefox_2":{
     "message":"Instalirajte Adblock Plus za Firefox ukoliko ga nemate.",
-    "description":"Instruction for how to check Firefox\/Chrome for a reported ad. Don't translate the name 'Adblock Plus'."
+    "description":"Instruction for how to check Firefox for a reported ad. Don't translate the name 'Adblock Plus'."
   },
   "checkinfirefox_3":{
     "message":"U tom pregledaču, pretplatite se na iste liste filtera koje imate na ovom.",
@@ -870,10 +866,6 @@
   "fixityourself":{
     "message":"OK, i dalje možete da blokirate ovu reklamu za sebe na strani sa podešavanjima. Hvala!",
     "description":"Telling users who won't report an ad to us how to handle it for themselves"
-  },
-  "adblock_outdated_chrome":{
-    "message":"Koristite staru verziju AdBlock-a. Molimo idite do [[strane za prijključke]], uključite 'Režim razvojnika' i kliknite na 'Ažuriraj priključke sada'",
-    "description":"Ad report page instructions to update AdBlock in Chrome. The link will point to 'chrome:\/\/chrome\/extensions\/'"
   },
   "block_an_ad_on_this_page":{
     "message":"Blokiraj reklamu na ovoj strani",
@@ -987,6 +979,10 @@
     "message":"Pauziraj AdBlock",
     "description":"Menu entry to pause AdBlock"
   },
+  "safarinotificationtitle":{
+    "message":"Premašena granica broja pravila za blokiranje sadržaja",
+    "description":"Title of a notification shown to Safari Content Blocking users with too many filter list rules"
+  },
   "undo_last_block":{
     "message":"Vrati moja blokiranja na ovom domenu",
     "description":"Menu entry to let the user cancel the result of running the blacklist wizard"
@@ -1002,10 +998,6 @@
   "hide_this_button":{
     "message":"Sakrij ovo dugme",
     "description":"Toolbar button menu entry to hide the AdBlock button"
-  },
-  "spread_the_word":{
-    "message":"Pomozite da proširimo reč!",
-    "description":"Text of a share link"
   },
   "pwyw":{
     "message":"Plati koliko hoćeš!",
@@ -1129,6 +1121,10 @@
     "message":"Dodaj filtere za drugi jezik: ",
     "description":"Dropdown list for language-specific filters"
   },
+  "how":{
+    "message":"Kako?",
+    "description":"Text of a link pointing to instructions on how to do something"
+  },
   "whats_this":{
     "message":"Šta je ovo?",
     "description":"Text of a link pointing to the explanation of a new feature"
@@ -1161,10 +1157,6 @@
       }
     }
   },
-  "latest_version":{
-    "message":"AdBlock je ažuran!",
-    "description":"On the Options > Support page, shows when there are no updates available for AdBlock"
-  },
   "here":{
     "message":"ovde",
     "description":"This message is injected in other strings as a link\/button"
@@ -1172,18 +1164,6 @@
   "adblocksupport":{
     "message":"AdBlock podrška",
     "description":"Title of the support tab"
-  },
-  "checkforupdates":{
-    "message":"Proveravanje ažuriranja (trebalo bi trajati samo par sekundi)...",
-    "description":"Displayed when AdBlock is checking the newest available version"
-  },
-  "somethingwentwrong":{
-    "message":"Desila se nekakva greška kod provere ažuriranja.",
-    "description":"Displayed when AdBlock is checking the newest available version and an error occurs"
-  },
-  "checkinternetconnection":{
-    "message":"Da biste prijavili reklamu, morate biti povezani na internet.",
-    "description":"Displayed when AdBlock is checking the newest available version and an error occurs while reporting an ad on adreport page"
   },
   "whatsnew":{
     "message":"Šta je novo u poslednjem izdanju? Pogledajte [[spisak promena]]!",
@@ -1321,8 +1301,36 @@
     "message":"Od treće strane",
     "description":"Resource list page: column title telling if the resource originates from a different domain"
   },
+  "adreport_name":{
+    "message":"Kako se zovete?",
+    "description":"Label for a textbox where the user enters their name (or nickname) to submit a bug or ad report."
+  },
+  "adreport_email":{
+    "message":"Vaša e-mail adresa?",
+    "description":"Label for a textbox where the user enters their email address to submit a bug or ad report."
+  },
+  "adreport_email_privacy":{
+    "message":"Ovo ćemo koristiti samo da Vas kontaktiramo ako nam je potrebno više informacija.",
+    "description":"Let the user know that their email address won't be used for reasons other than contacting them about their bug or ad report."
+  },
+  "adreport_location":{
+    "message":"Gde je tačno reklama na ovoj stranici? Kako izgleda?",
+    "description":"Question on the ad report page asking the user to describe the ad and its location on a webpage."
+  },
+  "adreport_screen_cap_upload":{
+    "message":"Priložite snimak ekrana:",
+    "description":"Label next to a file upload button."
+  },
   "buttonsubmit":{
     "message":"Pošalji",
     "description":"Button to send a form."
+  },
+  "adreport_response_save_error":{
+    "message":"Greška u čuvanju otpremljene datoteke.",
+    "description":"Error message shown when the server could not save an attached file."
+  },
+  "adreport_response_file_name":{
+    "message":"Ime datoteke je predugo. Molimo skratite ime datoteke.",
+    "description":"Error message shown when the file name of an attachement the user is trying to submit in a report is longer than 255 characters."
   }
 }
