--- a/_locales/zh_TW/messages.json
+++ b/_locales/zh_TW/messages.json
@@ -59,10 +59,6 @@
     "message":"您認為下列哪個規則會在瀏覽頁面時阻擋此廣告？",
     "description":"Blacklister attribute choosing page message"
   },
-  "blacklisternotsure":{
-    "message":"不確定？直接點選下方的 「阻擋」。",
-    "description":"Blacklister attribute choosing page message"
-  },
   "blacklisterthefilter":{
     "message":"即將套用的規則，仍可在選項中編輯：",
     "description":"Blacklister attribute choosing page message"
@@ -107,10 +103,6 @@
       }
     }
   },
-  "blacklistersinglematch":{
-    "message":"頁面上只有 1 個匹配項目被阻擋。",
-    "description":"Tells the user only one match was found"
-  },
   "blacklistermatches":{
     "message":"頁面上有 $matchcount$ 個匹配項目被阻擋。",
     "description":"Tells the user multiple matches were found",
@@ -146,10 +138,6 @@
   "buttonback":{
     "message":"返回",
     "description":"Back to previous wizard page button"
-  },
-  "findingads":{
-    "message":"正在尋找廣告...\n\n這只需要一點時間。",
-    "description":"When you press ctrl-shift-K the blacklister searches for ads"
   },
   "blockanadtitle":{
     "message":"阻擋廣告",
@@ -331,14 +319,6 @@
     "message":"訂閱過濾清單",
     "description":"Title of the filter list tab"
   },
-  "filterlistlink":{
-    "message":"請不要訂閱過多清單，每新增一個清單都會讓瀏覽器的速度降低！更多詳細資訊和過濾清單可在[[這裡]]找到。",
-    "description":"Explanation of the filter lists"
-  },
-  "updatenowmessage2":{
-    "message":"AdBlock會自動取得更新。 您也可以[[現在馬上更新]]",
-    "description":"Update filters text + button"
-  },
   "orenteraurl":{
     "message":"或輸入過濾清單網址：",
     "description":"Link for custom subscription"
@@ -439,10 +419,6 @@
     "message":"編輯被停用的清單：",
     "description":"Subtitle on the 'Customize' tab"
   },
-  "filtersavewarning":{
-    "message":"小心: 如果在這裡的設定出錯，包含官方的過濾清單，可能會失效！\n參閱[[過濾規則語法教學]]來正確地添加進階黑名單、白名單規則。",
-    "description":"Warning when blacklisting manually"
-  },
   "savebutton":{
     "message":"儲存",
     "description":"Save button"
@@ -471,10 +447,6 @@
     "message":"沒有偵測到已知的惡意軟體",
     "description":"On the ad report page, the ads the user is seeing are probably not caused by malware\/adware"
   },
-  "clickupdatefilters":{
-    "message":"點選: [[更新過濾清單！]]",
-    "description":"Instruction on ad report page"
-  },
   "reloadadpage":{
     "message":"重新載入出現廣告的頁面。",
     "description":"Instruction on ad report page"
@@ -491,10 +463,6 @@
     "message":"否",
     "description":"A negative response to a question"
   },
-  "clickdisableotherextensions":{
-    "message":" 或者 , 按下此按鈕以便完成上述所有操作: [[ 停用所有擴充 ]]",
-    "description":"On the ad report page, an alternative way to disable other extensions"
-  },
   "enableotherextensionscomplete":{
     "message":"所有先前停用的擴充已重新啟用",
     "description":"On the ad report page, alert notifying users that we've re-enabled extensions that were previously disabled"
@@ -503,12 +471,8 @@
     "message":"請至擴充頁面來啟用您以前曾經停用的擴充",
     "description":"On the ad report page, alert notifying users that they will need to manually reenable the extensions"
   },
-  "disableforchromeandsafaristeptwo":{
-    "message":"除了 AdBlock 維持勾選以外，取消所有其他擴充的『啟用』核取方塊",
-    "description":"Step 2 for disabling Chrome and Safari extensions"
-  },
   "disableforsafaristepone":{
-    "message":"選擇 Safari 選單 &rarr; 設定 &rarr; 擴充",
+    "message":"選擇 Safari 選單 > 設定 > 擴充",
     "description":"Step 1 for disabling Safari extensions"
   },
   "pagelanguagecheck":{
@@ -539,6 +503,10 @@
     "message":"烏克蘭文",
     "description":"Language name"
   },
+  "lang_arabic":{
+    "message":"阿拉伯文",
+    "description":"Language name"
+  },
   "lang_bulgarian":{
     "message":"保加利亞文",
     "description":"Language name"
@@ -553,6 +521,10 @@
   },
   "lang_dutch":{
     "message":"荷蘭文",
+    "description":"Language name"
+  },
+  "lang_estonian":{
+    "message":"愛沙尼亞文",
     "description":"Language name"
   },
   "lang_finnish":{
@@ -579,6 +551,10 @@
     "message":"印尼文",
     "description":"Language name"
   },
+  "lang_icelandic":{
+    "message":"冰島文",
+    "description":"Language name"
+  },
   "lang_israeli":{
     "message":"希伯來文",
     "description":"Language name"
@@ -593,6 +569,10 @@
   },
   "lang_korean":{
     "message":"韓文",
+    "description":"Language name"
+  },
+  "lang_lithuania":{
+    "message":"立陶宛文",
     "description":"Language name"
   },
   "lang_polish":{
@@ -679,17 +659,25 @@
     "message":"西班牙文",
     "description":"A filter list"
   },
+  "filtereasylist_plus_arabic":{
+    "message":"阿拉伯文",
+    "description":"A filter list"
+  },
+  "filtereasylist_plus_estonian":{
+    "message":"愛沙尼亞文",
+    "description":"A filter list"
+  },
+  "filtericelandic":{
+    "message":"冰島文",
+    "description":"A filter list"
+  },
+  "filtereasylist_plus_lithuania":{
+    "message":"立陶宛文",
+    "description":"A filter list"
+  },
   "other":{
     "message":"其他",
     "description":"Multiple choice option"
-  },
-  "orchrome":{
-    "message":"或是 Chrome",
-    "description":"Used for placeholder in checkinfirefoxtitle and checkinfirefox_1 strings"
-  },
-  "oradblockforchrome":{
-    "message":"或是 Chrome 版 AdBlock",
-    "description":"Used for placeholder in checkinfirefox_2 string"
   },
   "retryaftersubscribe":{
     "message":"先訂閱此過濾清單，然後重試一次：$list_title$",
@@ -700,14 +688,6 @@
         "example":"French filters"
       }
     }
-  },
-  "checkinfirefoxtitle":{
-    "message":"在 Firefox中檢查 ",
-    "description":"Tell a user to see if a reported ad also appears in Firefox\/Chrome"
-  },
-  "checkinfirefox_1":{
-    "message":"如果您尚未安裝的話，請先安裝 Firefox",
-    "description":"instruction for how to check Firefox\/Chrome for a reported ad"
   },
   "ff_checkinchrometitle":{
     "message":"在 Chrome 中檢查",
@@ -867,10 +847,6 @@
     "message":"隱藏這個按鈕",
     "description":"Toolbar button menu entry to hide the AdBlock button"
   },
-  "spread_the_word":{
-    "message":"將AdBlock推薦給更多人使用！",
-    "description":"Text of a share link"
-  },
   "pwyw":{
     "message":"想付多少，就付多少！",
     "description":"Text of a payment request link"
@@ -903,10 +879,6 @@
     "message":"頁面:",
     "description":"Caption for the whitelist wizard slider that modifies the path part of a URL"
   },
-  "show_ads_except_for":{
-    "message":"顯示廣告 在所有網站 除了這些網域...",
-    "description":"Section title for blacklisting section of Customize tab"
-  },
   "only_block_ads_on_these_sites":{
     "message":"只在以下網站啟用:",
     "description":"Label for textbox where user enters a list of sites on Customize tab"
@@ -915,17 +887,9 @@
     "message":"格式: ~site1.com|~site2.com|~news.site3.org",
     "description":"Example showing users how to input a list of sites on the Customize tab. You can translate the 'news' and 'siteN' but leave the '|'s and '~'s in place."
   },
-  "warning_overrules_filters":{
-    "message":"警告: 你會在其他網站看見廣告!\n你會在其他網站看見廣告。",
-    "description":"Message on the 'Customize' tab of the options page, explaining the danger of adding a blacklisting filter"
-  },
   "storage_quota_exceeded":{
     "message":"你超出了 AdBlock 能使用的儲存空間。 請取消訂閱一些清單!",
     "description":"Message shown when the user uses more storage than allowed by the browser"
-  },
-  "safari50_updatenotice":{
-    "message":"你正在使用舊版的 Safari，請 [[升級您的瀏覽器 ]] 以便使用在工具列按鈕中暫停 AdBlock，白名單，回報廣告等等最新的功能。",
-    "description":"A message shown to Safari 5.0 users urging them to upgrade"
   },
   "blocked_ads":{
     "message":"被阻擋的廣告：",
@@ -967,20 +931,6 @@
     "message":"自訂過濾清單",
     "description":"List for custom filters the user subscribed to"
   },
-  "customfilterserrormessage":{
-    "message":"以下過濾器 \n $filter$ \n 有錯誤訊息：\n $message$",
-    "description":"Error message when there is an issue with a custom filter on the 'Customize' tab of the Options page",
-    "placeholders":{
-      "filter":{
-        "content":"$1",
-        "example":"@@.ad"
-      },
-      "message":{
-        "content":"$2",
-        "example":"invalid filter"
-      }
-    }
-  },
   "languagedropdowndescription":{
     "message":"替其他語言新增過濾清單 ",
     "description":"Dropdown list for language-specific filters"
@@ -993,10 +943,6 @@
     "message":" --選擇語言-- ",
     "description":"Text for the first option in Langage Dropdown for Filter Lists tab in options. Include the ' -- ' on either side of your translation."
   },
-  "latest_version":{
-    "message":"AdBlock 是最新的！",
-    "description":"On the Options > Support page, shows when there are no updates available for AdBlock"
-  },
   "here":{
     "message":"這裡 ",
     "description":"This message is injected in other strings as a link\/button"
@@ -1004,18 +950,6 @@
   "adblocksupport":{
     "message":"AdBlock 支援與協助",
     "description":"Title of the support tab"
-  },
-  "somethingwentwrong":{
-    "message":"在檢查更新的時候出了點錯誤",
-    "description":"Displayed when AdBlock is checking the newest available version and an error occurs"
-  },
-  "checkinternetconnection":{
-    "message":"你必須連上網路才能回報廣告",
-    "description":"Displayed when AdBlock is checking the newest available version and an error occurs while reporting an ad on adreport page"
-  },
-  "whatsnew":{
-    "message":"在新版中有哪些新功能？ 請參考 [[更新日誌]]！",
-    "description":"Link to display the changelog on the Support tab of the options"
   },
   "englishonly":{
     "message":"僅限英文",
@@ -1036,26 +970,6 @@
   "questionoridea":{
     "message":"有任何問題或者是新的點子？",
     "description":"Subtitle on the Support tab of the options"
-  },
-  "sourcecode":{
-    "message":"原始碼是[[ 開源的 ]]！",
-    "description":"Link to the source code of AdBlock on the Support tab of the options"
-  },
-  "debuginfo":{
-    "message":"我們的研發團隊有像您索取除錯資訊(debug info) ?  [[點我]]取得這些資訊 ！",
-    "description":"Users can click this link to provide debug information to AdBlock staff"
-  },
-  "supportsite":{
-    "message":"請來我們的[[技術與支援網站]]讓我們聆聽您的意見！",
-    "description":"Link to the support site on the Support tab of the options"
-  },
-  "ad_report_please":{
-    "message":"如果你看到了廣告，請[[回報廣告]]而不是回報bug",
-    "description":"Link to the ad report page on our support site. This is found on the Support tab of the options."
-  },
-  "headertype":{
-    "message":"類型",
-    "description":"Resource list page: title of a column"
   },
   "typesub_frame":{
     "message":"frame",
